Adding images in BC3

--- a/bc3-data/100369508.md
+++ b/bc3-data/100369508.md
@@ -10,9 +10,9 @@ Hyacinthe SHAN SEI FAN, resp. [Groupe thématique Logiciel Libre](http ://syste
 
 ![](./../../zz_assets/images/previews/3355976-guidedesmembresdugtll.png)
 
-](bc3-raw/files/3355976-guidedesmembresdugtll.pdf)
+](../bc3-images/3355976-guidedesmembresdugtll.pdf)
 
-[GuideDesMembresDuGTLL.pdf 232 KB • Download](bc3-raw/files/3355976-guidedesmembresdugtll.pdf)
+[GuideDesMembresDuGTLL.pdf 232 KB • Download](../bc3-images/3355976-guidedesmembresdugtll.pdf)
 
 ### **Hyacinthe** - 2016-05-03 at 4:50 PM
 
