--- a/bc3-data/100392577.md
+++ b/bc3-data/100392577.md
@@ -1,12 +1,12 @@
 # Génération De Documentation (automatique)  - 2016-04-06
 
-![Hyacinthe, echopen](./../../zz_assets/images/avatars/2157822.png) Hyacinthe  : ton outils d'extraction automatique de documentation à partir des sources me semble être la bonne voie.  J'avais glâné quelques ressources :   
+Hyacinthe Hyacinthe  : ton outils d'extraction automatique de documentation à partir des sources me semble être la bonne voie.  J'avais glâné quelques ressources :   
 
  * [Static Site Generators](https://staticsitegenerators.net/) : une synthèse des outils  * [GPP 2.23 — Generic Preprocessor](http://files.nothingisreal.com/software/gpp/gpp.html) : je savait même pas que ça existait. A creuser ;-)  * [Building Publishing Workflows with Pandoc and Git](http://publishing.sfu.ca/2013/11/building-publishing-workflows-with-pandoc-and-git/)  * [HF Antennas: Vertical or Horizontal?](http://hamwaves.com/vertical-horizontal/en/index.html#summary) : Un exemple de site statique (pas beau) &gt;&gt;&gt; **ouvrir le fichier "make"** : lien en haut à gauche.  * [Writing, Markdown and Pandoc](http://brizzled.clapper.org/blog/2010/11/26/writing-markdown-and-pandoc/)  * [Pandoc Extras](https://github.com/jgm/pandoc/wiki/Pandoc-Extras) : d'autres outils  * [EspruinoDocs](https://github.com/espruino/EspruinoDocs#espruinodocs) : sous /bin, je générateur de doc.**         **
 
 ### **Hyacinthe** - 2016-04-06 at 9:07 AM
 
-Merci  ![Hyacinthe, Libre faiseur at echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe  je vous invite avec  ![Hyacinthe, echopen](./../../zz_assets/images/avatars/2157822.png) Hyacinthe  comme vous avez commencé à avancer ce sujet à proposer un draft de solution à la réunion de  Lundi prochain. Ça vous va ?
+Merci  Hyacinthe Hyacinthe  comme vous avez commencé à avancer ce sujet à proposer un draft de solution à la réunion de  Lundi prochain. Ça vous va ?
 
 ### **Hyacinthe** - 2016-04-06 at 10:38 AM
 
@@ -38,7 +38,7 @@ Dans ce cadre et aussi en rapport avec <https://3.basecamp.com/3152267/buckets/1
 
 ### **Hyacinthe** - 2016-04-12 at 6:20 AM
 
-![Hyacinthe, echopen](./../../zz_assets/images/avatars/2157822.png) Hyacinthe  et ![Hyacinthe, Libre faiseur at echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe  par rapport à ce qui a été dit hier, pensez-vous qu'il serait intéressant de créer un repo GitHub pour tester le modèle discuté de documentation ?   
+Hyacinthe Hyacinthe  par rapport à ce qui a été dit hier, pensez-vous qu'il serait intéressant de créer un repo GitHub pour tester le modèle discuté de documentation ?   
 
  1. Créer un repo sur le Github "medico-technique"   2. Ajouter un readme avec l'essentiel des règles (que nous pourrons modifier au fur et à mesure) incluant :    1. How to contribute    2. File name (nomenclature)    3. Principles / flow and merge conditions    4. Glossaire (inclu ou non dans le readme) - fait par  ![Hyacinthe, Community & knowledge at echopen](./../../zz_assets/images/avatars/1269172.png) Hyacinthe    3. Ajouter le premier module (réalisé par Michel) avec doc &amp; source files puis avancer avec  ![Hyacinthe, Danseur du ventre at echopen](./../../zz_assets/images/avatars/1248689.png) Hyacinthe  sur les autres modules petit à petit et voir comment ajuster ? On pourrait ainsi faire un bilan à chaque ajout et ajuster l'ensemble en conséquence. 
 
@@ -54,7 +54,7 @@ Top.   J'ai créé le repo, @Hyacinthe tu en es admin également, comme ca tu po
 
 ### **Hyacinthe** - 2016-04-12 at 9:38 AM
 
-ok. top. Do it, fail it fix it ;)  ![Hyacinthe, Libre faiseur at echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe  on te laisse le temps de voir et dès qu'on a ton feu vert, on tenter d'ajouter le module de michel pour test.   On pourra en effet tout à fait le refaire ensuite après avoir tester.   Merci.
+ok. top. Do it, fail it fix it ;)  Hyacinthe Hyacinthe  on te laisse le temps de voir et dès qu'on a ton feu vert, on tenter d'ajouter le module de michel pour test.   On pourra en effet tout à fait le refaire ensuite après avoir tester.   Merci.
 
 ### **Hyacinthe** - 2016-04-12 at 12:27 PM
 
@@ -74,9 +74,9 @@ yep pour l'autodoc   btw, je suis déjà dessus sur les communs de doc : non seu
 
 ### **Hyacinthe** - 2016-08-19 at 12:01 PM
 
-du coup il faut qu'on fasse un point sur   \- l'harmonisation du soft et du modèle de doc de ![Hyacinthe, Libre faiseur at echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe  \- la génération de gitbook à partir de l a doc   -&gt; mini-workshop sur la doc vendredi prochain ? en mode reprise de saison pour les apéros
+du coup il faut qu'on fasse un point sur   \- l'harmonisation du soft et du modèle de doc de Hyacinthe Hyacinthe  \- la génération de gitbook à partir de l a doc   -&gt; mini-workshop sur la doc vendredi prochain ? en mode reprise de saison pour les apéros
 
 ### **Hyacinthe** - 2016-10-17 at 9:20 PM
 
-A y est, le PDF généré dépasse les [250 pages](https://www.gitbook.com/book/Hyacinthe124/echomods/) sur le kit, quand on le DL en PDF =)
+A y est, le PDF généré dépasse les [250 pages](https://www.gitbook.com/book/kelu124/echomods/) sur le kit, quand on le DL en PDF =)
 
