--- a/bc3-data/100695652.md
+++ b/bc3-data/100695652.md
@@ -12,15 +12,15 @@ Je regarde ca en fin daprem!
 
 ### **Hyacinthe** - 2016-04-09 at 7:27 AM
 
-Hello,   Hier,  ![Hyacinthe, Danseur du ventre at echopen](./../../zz_assets/images/avatars/1248689.png) Hyacinthe  et  ![Michel Bala, Electronique analogique at echopen](./../../zz_assets/images/avatars/2008321.png) Michel , sur la base du premier brouillon de la fiche module, ont réalisé un premier module celui du détecteur d'enveloppe (3 composants sur un bout de plaque).   L'idée étant de poser une première proposition à vous présenter lundi soir lors de la réunion hebdomadaire pour que tous puissiez faire vos retours, remarques et suggestions et qu'on l'améliore par itérations et prendre en compte les avancées et travaux des uns et des autres.   La documentation, est disponible [ici](https://docs.google.com/document/d/1ZrQnQYbzWZsSQswlGicaGloDg0jS_OSDsJJOcuHyHIk). Là encore il s'agit d'un premier test en vue d'obtenir les retours de la communauté et d'identifier les améliorations possibles.   Voici une photo du module en question, la photo méritera d'être améliorer avec une réf métrique et une vue plus explicite.   Tous vos retours sont les bienvenus.   
+Hello,   Hier,  Hyacinthe Michel , sur la base du premier brouillon de la fiche module, ont réalisé un premier module celui du détecteur d'enveloppe (3 composants sur un bout de plaque).   L'idée étant de poser une première proposition à vous présenter lundi soir lors de la réunion hebdomadaire pour que tous puissiez faire vos retours, remarques et suggestions et qu'on l'améliore par itérations et prendre en compte les avancées et travaux des uns et des autres.   La documentation, est disponible [ici](https://docs.google.com/document/d/1ZrQnQYbzWZsSQswlGicaGloDg0jS_OSDsJJOcuHyHIk). Là encore il s'agit d'un premier test en vue d'obtenir les retours de la communauté et d'identifier les améliorations possibles.   Voici une photo du module en question, la photo méritera d'être améliorer avec une réf métrique et une vue plus explicite.   Tous vos retours sont les bienvenus.   
 
 [
 
-![](bc3-raw/files/3504719-fullsizerender.jpg)
+![](../bc3-images/3504719-fullsizerender.jpg)
 
-](bc3-raw/files/3504719-fullsizerender.jpg)
+](../bc3-images/3504719-fullsizerender.jpg)
 
-[FullSizeRender.jpg 1.05 MB • Download](bc3-raw/files/3504719-fullsizerender.jpg)
+[FullSizeRender.jpg 1.05 MB • Download](../bc3-images/3504719-fullsizerender.jpg)
 
 ### **Hyacinthe** - 2016-04-09 at 12:20 PM
 
@@ -34,17 +34,17 @@ Top!  Je comprends que les IO (inputs/outputs) se font sur la plaque physiquemen
 
 [
 
-![](bc3-raw/files/3514906-20160410_112533_hdr2.jpg)
+![](../bc3-images/3514906-20160410_112533_hdr2.jpg)
 
-](bc3-raw/files/3514906-20160410_112533_hdr2.jpg)
+](../bc3-images/3514906-20160410_112533_hdr2.jpg)
 
-[20160410_112533_HDR2.jpg 805 KB • Download](bc3-raw/files/3514906-20160410_112533_hdr2.jpg)
+[20160410_112533_HDR2.jpg 805 KB • Download](../bc3-images/3514906-20160410_112533_hdr2.jpg)
 
  * A priori une seule rangée de pins est nécessaire au lieu deux. En plus ça libère la largeur des modules.
 
 ### **Hyacinthe** - 2016-04-10 at 11:07 AM
 
-Apropos de la proposition de  ![Hyacinthe, echopen](./../../zz_assets/images/avatars/2157822.png) Hyacinthe  sur le Wiki : "_une configuration de pistes du style proposé earlier cette semaine (_[_tof remise sur le wiki ici _](http://echopen.org/index.php?title=Worklog_- _the_module_approach#A_rough_draft)_)_".  Je me suis permis de proposer qq modifs :
+Apropos de la proposition de  Hyacinthe Hyacinthe  sur le Wiki : "_une configuration de pistes du style proposé earlier cette semaine (_[_tof remise sur le wiki ici _](http://echopen.org/index.php?title=Worklog_- _the_module_approach#A_rough_draft)_)_".  Je me suis permis de proposer qq modifs :
 
  * Ajout d'une colonne pour commencer à figer des id des signaux  * Ajout de 3 pistes qui permettraient de piloter aussi les steppers. On y voir apparaitre une particularité : si on sait que deux technologies ne coexisteront jamais dans un même modèle de sonde, alors deux signaux différents peuvent se partager une même piste (cf. SIG-cc_motor_pwm ; SIG-stepper_b2).  * SIG-pulser_on et SIG-pulser_off continuent de me gêner : une contrainte techno dans un des modules qui "remonte" sur le fond de panier. Si un jour qq'un refait un autre pulser sans cette contrainte, il sera obligé d'émuler les "faiblesses" du module historique. Mais, ça peut se justifier au nom du principe "KISS". Sinon ne pourrait-on pas ajouter une détection du front montant et du front descendant d'un SIG-pulse unique ?
 
@@ -58,7 +58,7 @@ Oui, très fier de ma contribution wiki ;-). Quoique rendu un peu perplexe par l
 
 ### **Hyacinthe** - 2016-04-11 at 4:44 PM
 
-j'ai commenté le doc de  ![Hyacinthe, Danseur du ventre at echopen](./../../zz_assets/images/avatars/1248689.png) Hyacinthe  et liens vers les précédents documents que j'avais fait :    
+j'ai commenté le doc de  Hyacinthe Hyacinthe  et liens vers les précédents documents que j'avais fait :    
 
 <https://docs.google.com/document/d/1RrCh8tkR_IoBdsZZnKcKZwsHm70WCpwMV6Ac_HJxho8/edit>
 
@@ -72,7 +72,7 @@ et le suivant:
 
 ### **Hyacinthe** - 2016-04-12 at 12:42 PM
 
-![Hyacinthe, Libre faiseur at echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe  comme convenu, voici la doc des submodules de git. ca peut inspirer
+Hyacinthe Hyacinthe  comme convenu, voici la doc des submodules de git. ca peut inspirer
 
 ### **Hyacinthe** - 2016-04-12 at 4:17 PM
 
