--- a/bc3-data/104094356.md
+++ b/bc3-data/104094356.md
@@ -28,7 +28,7 @@ Je veux dire : Hyacinthe est-il sur le basecamp?
 
 ### **Hyacinthe** - 2016-04-11 at 6:07 PM
 
-![Hyacinthe, Community & knowledge at echopen](./../../zz_assets/images/avatars/1269172.png) Hyacinthe  je vais lui demander demain   ![Hyacinthe, echopen](./../../zz_assets/images/avatars/2157822.png) Hyacinthe  le truc cqu'il faut bcp bcp de data pour entraîner les réseuax de neurones mais on en parle ;)
+Hyacinthe Hyacinthe  le truc cqu'il faut bcp bcp de data pour entraîner les réseuax de neurones mais on en parle ;)
 
 ### **Hyacinthe** - 2016-04-11 at 10:49 PM
 
