--- a/bc3-data/106011642.md
+++ b/bc3-data/106011642.md
@@ -12,11 +12,11 @@ Je plussois le coté pratique et économique de faire des 1/2 cartes mères, en 
 
 ### **Hyacinthe** - 2016-04-13 at 4:55 PM
 
-![Hyacinthe, hardware thinker at echopen](./../../zz_assets/images/avatars/782574.png) Hyacinthe on pourrait voir à quoi ça ressemble avant d'envoyer en fab ? Sinon si tu as déjà un jeu de pistes d'interface qui est suffisant pour tes modules c'est déjà une bonne référence.
+Hyacinthe Hyacinthe on pourrait voir à quoi ça ressemble avant d'envoyer en fab ? Sinon si tu as déjà un jeu de pistes d'interface qui est suffisant pour tes modules c'est déjà une bonne référence.
 
 ### **Hyacinthe** - 2016-04-13 at 5:11 PM
 
-![Hyacinthe, Danseur du ventre at echopen](./../../zz_assets/images/avatars/1248689.png) Hyacinthe , ![Hyacinthe, hardware thinker at echopen](./../../zz_assets/images/avatars/782574.png) Hyacinthe , la remarque :   "_dans tel solution c'est tel signal logique et dans tel autre, c'est tel signal logique... _"  ... me rend aussi très perplexe ...   Si on est pas capable d'avoir un design unique de carte mère (mécanique et électrique), je crois qu'on a tout faux.  J'ai effectivement proposé une alternative pour les deux signaux pwm de moteur CC et les 4 signaux du stepper. Mais ce sont des signaux de sortie externes qui squattent des pistes libres et des solutions qui sont exclusives. Par ailleurs, j'espère qu'on ne va pas s'accrocher trop longtemps à la solution moteur CC dès qu'on aura validé un minimum le moteur stepper.
+Hyacinthe Hyacinthe , la remarque :   "_dans tel solution c'est tel signal logique et dans tel autre, c'est tel signal logique... _"  ... me rend aussi très perplexe ...   Si on est pas capable d'avoir un design unique de carte mère (mécanique et électrique), je crois qu'on a tout faux.  J'ai effectivement proposé une alternative pour les deux signaux pwm de moteur CC et les 4 signaux du stepper. Mais ce sont des signaux de sortie externes qui squattent des pistes libres et des solutions qui sont exclusives. Par ailleurs, j'espère qu'on ne va pas s'accrocher trop longtemps à la solution moteur CC dès qu'on aura validé un minimum le moteur stepper.
 
 ### **Hyacinthe** - 2016-04-14 at 10:09 AM
 
@@ -24,11 +24,11 @@ En ce qui concerne les 3 possibilités de cartes filles, pour_ _la troisième j
 
 [
 
-![](bc3-raw/files/3697306-cartemere_cartefille.jpg)
+![](../bc3-images/3697306-cartemere_cartefille.jpg)
 
-](bc3-raw/files/3697306-cartemere_cartefille.jpg)
+](../bc3-images/3697306-cartemere_cartefille.jpg)
 
-[cartemere_cartefille.jpg 252 KB • Download](bc3-raw/files/3697306-cartemere_cartefille.jpg)
+[cartemere_cartefille.jpg 252 KB • Download](../bc3-images/3697306-cartemere_cartefille.jpg)
 
   Aux quatre coins pour la stabilité mécanique. Après si on trouve des entretoises qui vont biens ça serait cool. Pourquoi 2 pins? Pour s'assurer qu'on soude les pins bien perpendiculairement à la plaque, avec une seule pin on a de fortes chances de souder de travers et après on ne pourra pas plugger les modules.   En ce qui concerne la modularité des signaux logiques, par exemple la commande moteur sera une PWM pour moteur CC, une PWM pour servo et je ne sais pas quoi pour le moteur pas à pas. La commande logique est différente mais le signal à la même fonction. Je pose ça à plat et je reviens vers vous.  Mais bien vu Hyacinthe, on peut mettre les alims les plus utilisées et des masses sur les pins de support.
 
@@ -44,7 +44,7 @@ Pourquoi ne pas passer à la production de carte électronique pour réaliser vo
 
 Yop,@Hyacinthe : tu es sur du 15 pins sur tes photos, c'est voulu?   Attaché, un petit excel avec les tables sur les pistes requises par nos différentes approches, pour mémoire (et pour édition facile).   On avait commencé à drafter la table des pistes, qui est sur : <http://echopen.org/index.php?title=Modules_:_a_motherboard> pour référence.   Cheers! 
 
-[![](./../../zz_assets/images/file-types/xlsx.png) Pistes.xlsx 10.5 KB • Download](bc3-raw/files/3697900-pistes.xlsx)
+[![](./../../zz_assets/images/file-types/xlsx.png) Pistes.xlsx 10.5 KB • Download](../bc3-images/3697900-pistes.xlsx)
 
 ### **Hyacinthe** - 2016-04-14 at 10:27 AM
 
@@ -62,15 +62,15 @@ Noté.   Nous avions convenu lors de la réunion de lundi de partir sur une list
 
 Quelques remarques :
 
- * ![Hyacinthe, Danseur du ventre at echopen](./../../zz_assets/images/avatars/1248689.png) Hyacinthe ,  pour souder bien perpendiculairement n'importe quel connecteur il suffit de le plugger sur un autre connecteur d'une carte possèdant 2 rangées de pins et de mettre un autre connecteur monté à vide dans la carte : un mini montage de mise en place. Et là on fait ce qu'on veut, proprement.  * ![Hyacinthe, Electronique at echopen](./../../zz_assets/images/avatars/1249123.png) Hyacinthe ,  Ok pour produire des PCBs spécifiques pour les modules . Mais ça ne me semble pas nécessaire dans un premier temps pour la carte mère. Ce sera forcément plus cher et moins évolutif. Quel est l'intéret de faire fabriquer une carte à bande et de faire plein de trous dedans ? Il faut penser aussi au maker qui voudrait reproduire le kit, plus il y aura de composants dispo sur étagère mieux ce sera.  * ![Hyacinthe, Danseur du ventre at echopen](./../../zz_assets/images/avatars/1248689.png) Hyacinthe , sur l'exemple de soudure présenté avec uniquement les pins nécessaires si tu commences à spécialiser les connecteurs femelles de la carte mère on perd toute souplesse. Ok pour ne mettre que les pins males nécessaires sur le module mais gardons une barrette femelle complète sur la carte mère. Elle pourra accueillir n'importe quel module.  * ![Hyacinthe, hardware thinker at echopen](./../../zz_assets/images/avatars/782574.png) Hyacinthe , je modifierai bien le doc des pistes pour rejeter une masse et les alims sur les bords. De toute façon, maintenant le principe d'affectation en commençant au centre est moins important puisque tout est plein. Cela permettra de garder une stabilité mécanique relative des modules si on décide de n'y souder que les pins males nécessaires. Par ailleurs si on veut quand même aller à 24 pistes on pourra les ajouter à l'extérieur. Ce qui compte c'est qu'il y ait un bon écartement entre le gnd et le 5v (qu'on soudera sur tout module). Je propose une nouvelle version du fichier (en bougeant un peu tout pour essayer aussi de minimiser les risques de bruit).  * Je réserverai bien un espace sans composant de 5mmx5mm sur les deux coins inférieurs des modules pour y souder une pin (beurk!) ou y pincer une agraffe plastique (hmmm!) afin d'assurer la stabilité mécanique.
+ * Hyacinthe Hyacinthe , je modifierai bien le doc des pistes pour rejeter une masse et les alims sur les bords. De toute façon, maintenant le principe d'affectation en commençant au centre est moins important puisque tout est plein. Cela permettra de garder une stabilité mécanique relative des modules si on décide de n'y souder que les pins males nécessaires. Par ailleurs si on veut quand même aller à 24 pistes on pourra les ajouter à l'extérieur. Ce qui compte c'est qu'il y ait un bon écartement entre le gnd et le 5v (qu'on soudera sur tout module). Je propose une nouvelle version du fichier (en bougeant un peu tout pour essayer aussi de minimiser les risques de bruit).  * Je réserverai bien un espace sans composant de 5mmx5mm sur les deux coins inférieurs des modules pour y souder une pin (beurk!) ou y pincer une agraffe plastique (hmmm!) afin d'assurer la stabilité mécanique.
 
   A vous de jouer !
 
-[![](./../../zz_assets/images/file-types/xlsx.png) Pistes v2.xlsx 12.7 KB • Download](bc3-raw/files/3701963-pistes-v2.xlsx)
+[![](./../../zz_assets/images/file-types/xlsx.png) Pistes v2.xlsx 12.7 KB • Download](../bc3-images/3701963-pistes-v2.xlsx)
 
 ### **Hyacinthe** - 2016-04-14 at 1:28 PM
 
-![Hyacinthe, Libre faiseur at echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe  Pour le prix ça dépend vers quel option tu te dirige et encore vu que ce sont de petites cartes avec peu de faces et pas forcement beaucoup de composants,  Intérêt:  *permettre d'optimiser en place (sur 2 couches en CMS face aux matrices à trous) et c'est pas négligeable de réduire la taille de la carte mère (en hauteur, en longueur et en largeur)  *Amélioration des performances (ça évite les mauvaises brasures, les rayonnement électromagnétiques et autres magies obscures)  *Gestion de la précision mécanique, tu n'est pas limité par la taille des pins, ni par l'espace entre les pins etc et tu peux même imaginer plusieurs autres alternatives aux pins :       - un sock type PCI ou tu viens pluguer ta carte fille       - un connecteur FMC (trop de pin je suppose) ou autre       - je connais pas masse de différents type de connecteurs mais on peux ainsi ne pas se limiter à cette façon de faire
+Hyacinthe Hyacinthe  Pour le prix ça dépend vers quel option tu te dirige et encore vu que ce sont de petites cartes avec peu de faces et pas forcement beaucoup de composants,  Intérêt:  *permettre d'optimiser en place (sur 2 couches en CMS face aux matrices à trous) et c'est pas négligeable de réduire la taille de la carte mère (en hauteur, en longueur et en largeur)  *Amélioration des performances (ça évite les mauvaises brasures, les rayonnement électromagnétiques et autres magies obscures)  *Gestion de la précision mécanique, tu n'est pas limité par la taille des pins, ni par l'espace entre les pins etc et tu peux même imaginer plusieurs autres alternatives aux pins :       - un sock type PCI ou tu viens pluguer ta carte fille       - un connecteur FMC (trop de pin je suppose) ou autre       - je connais pas masse de différents type de connecteurs mais on peux ainsi ne pas se limiter à cette façon de faire
 
 ### **Hyacinthe** - 2016-04-14 at 1:29 PM
 
@@ -118,11 +118,11 @@ Le connecteur ISA ... toute ma jeunesse ...
 
 ### **Hyacinthe** - 2016-04-14 at 4:31 PM
 
-![Hyacinthe, Danseur du ventre at echopen](./../../zz_assets/images/avatars/1248689.png) Hyacinthe , "_ PS: pourquoi 4 signaux pour le pas à pas?_ "  Les steppers ont 2 bobines qui sont alimentées en +/- 5v à travers des ponts en H. Eux même pilotés en PWM pour gérer les courants et les micros-pas. Mais c'est le driver qui fait tout ça.  <https://a.pololu- files.com/picture/0J4344.600.png?519b6c6d74c2f655dd6637eccd4590c0>  Celui que j'utilise est aussi capable de driver 2 moteurs CC en marche avant/arrière.
+Hyacinthe Hyacinthe , "_ PS: pourquoi 4 signaux pour le pas à pas?_ "  Les steppers ont 2 bobines qui sont alimentées en +/- 5v à travers des ponts en H. Eux même pilotés en PWM pour gérer les courants et les micros-pas. Mais c'est le driver qui fait tout ça.  <https://a.pololu- files.com/picture/0J4344.600.png?519b6c6d74c2f655dd6637eccd4590c0>  Celui que j'utilise est aussi capable de driver 2 moteurs CC en marche avant/arrière.
 
 ### **Hyacinthe** - 2016-04-15 at 7:38 AM
 
-![Hyacinthe, hardware thinker at echopen](./../../zz_assets/images/avatars/782574.png) Hyacinthe Ah si classe!
+Hyacinthe Hyacinthe Ah si classe!
 
 ### **Hyacinthe** - 2016-04-15 at 8:46 AM
 
@@ -134,7 +134,7 @@ Top.  On essaye de se fixer une solution ce soir, histoire de ?
 
 ### **Hyacinthe** - 2016-04-15 at 9:40 AM
 
-![Hyacinthe, Libre faiseur at echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe , en fait les 4 signaux sont interne au module moteur, les signaux logiques qui nous intéressent pour la carte mère sont plus step et dir non?
+Hyacinthe Hyacinthe , en fait les 4 signaux sont interne au module moteur, les signaux logiques qui nous intéressent pour la carte mère sont plus step et dir non?
 
 ### **Hyacinthe** - 2016-04-15 at 9:41 AM
 
@@ -146,7 +146,7 @@ Ouiiii
 
 ### **Hyacinthe** - 2016-04-15 at 10:11 AM
 
-![Hyacinthe, Danseur du ventre at echopen](./../../zz_assets/images/avatars/1248689.png) Hyacinthe , la question est : est-ce qu'on embarque le driver moteur (CC ou stepper) dans le module µC ou est-ce qu'on fait deux modules séparés ?  Moi j'envisageait un seul module µC avec le driver de stepper (qui est aussi capable de driver un moteur CC) et qq composants annexes (transistors, condos,...) d'adaptation pour les autres signaux pour ne pas trop multiplier les modules.  Les quatres fils peuvent sortir directement du module mais je me dis que, si on le peut, c'est plus élégant qu'ils sortent en bout de CM (avec d'autres fils externes) vers le moteur, transducteur, top/tour,... Si on change un module, on a juste à le (dé/re)plugger sans (dé/re)brancher tous les fils externes. On pourrait presque se passer de connecteurs pour les composants externes en soudant directement les fils sur la CM qu'on est pas prets, elle, de changer (quoique ![Hyacinthe, Electronique at echopen](./../../zz_assets/images/avatars/1249123.png) Hyacinthe réussira peut- être à la cramer... ). ![Hyacinthe, hardware thinker at echopen](./../../zz_assets/images/avatars/782574.png) Hyacinthe pt'être qu'on peut même plugger directement un connecteur ISA en bout de CM ;-)
+Hyacinthe Hyacinthe pt'être qu'on peut même plugger directement un connecteur ISA en bout de CM ;-)
 
 ### **Hyacinthe** - 2016-04-15 at 10:25 AM
 
@@ -174,11 +174,11 @@ hé, hé...
 
 ### **Hyacinthe** - 2016-04-15 at 1:44 PM
 
-C'est quoi que je dois cramer? Je suis un spécialiste pour ça :p pour les explosions faut voir avec ![Hyacinthe, FPGA at echopen](./../../zz_assets/images/avatars/1249124.png) Hyacinthe   vu qu'il est italien/corse
+C'est quoi que je dois cramer? Je suis un spécialiste pour ça :p pour les explosions faut voir avec Hyacinthe Hyacinthe   vu qu'il est italien/corse
 
 ### **Hyacinthe** - 2016-04-20 at 9:40 PM
 
-![Hyacinthe, Community & knowledge at echopen](./../../zz_assets/images/avatars/1269172.png) Hyacinthe , ![Hyacinthe, hardware thinker at echopen](./../../zz_assets/images/avatars/782574.png) Hyacinthe , ![Hyacinthe, Electronique at echopen](./../../zz_assets/images/avatars/1249123.png) Hyacinthe , ![Hyacinthe, Danseur du ventre at echopen](./../../zz_assets/images/avatars/1248689.png) Hyacinthe , je me rends compte qu'on a pas validé définitivement les noms des interfaces. Même si on est globalement d'accord, pour que l'ensemble du dépot Git, de la doc, des schémas des sources soit un tout cohérent il faut qu'on utilise tous exactement les mêmes noms. J'avais donc proposé les termes suivants :   **Name** **Title** **Amplitude**  | [ITF-A_gnd](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-A_gnd)  | _Ground_  | [0v, 0v]  | [ITF-B_5v](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-B_5v)  | _5v alimentation_  | [5v, 5v]  | [ITF- C_amplified_raw_signal](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-C_amplified_raw_signal)  | _Amplified raw signal_  | [0v, 2v]  | [ITF- D_amplified_filtered_signal](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-D_amplified_filtered_signal)  | _Amplified filtered signal_  | [0v, 2v]  | [ITF- E_signal_envelope](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-E_signal_envelope)  | _Signal envelope_  | [0v, 2v]  | [ITF-F_12v](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-F_12v)  | _12v alimentation_  | [12v, 12v]  | [ITF- G_amplifier_gain](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-G_amplifier_gain)  | _Amplifier gain_  | [0v, 1v]  | [ITF- H_neg_12v](https://github.com/Bivi/medicotechnical/blob/master/interfaces/ITF- H_neg_12v)  | _-12v alimentation_  | [-12v, -12v]  | [ITF- I_pulse_on](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-I_pulse_on)  | _Pulse on_  | [0v, 5v]  | [ITF- J_pulse_off](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-J_pulse_off)  | _Pulse off_  | [0v, 5v]  | [ITF- K_pulse_redpitaya](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-K_pulse_redpitaya)  | _Pulse info for Redpitaya_  | [0v, 5v]  | [ITF- L_18v_alimentation](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-L_18v_alimentation)  | _18v external alimentation_  | [15v, 20v]  | [ITF- M_abs_angle](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-M_abs_angle)  | _Absolute tranducer position_  | [0v, 5v]  | [ITF- N_cc_motor_pwm](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-N_cc_motor_pwm)  | _CC motor pwm_  | [0v, 5v]  | [ITF- N_stepper_b2](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-N_stepper_b2)  | _Stepper motor B2 signal_  | [-5v, 5v]  | [ITF- O_cc_motor_encoder](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-O_cc_motor_encoder)  | _CC motor incremental encoder_  | [0v, 5v]  | [ITF- O_stepper_b1](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-O_stepper_b1)  | _Stepper motor B1 signal_  | [-5v, 5v]  | [ITF- P_stepper_a1](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-P_stepper_a1)  | _Stepper motor A1 signal_  | [-5v, 5v]  | [ITF- Q_stepper_a2](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-Q_stepper_a2)  | _Stepper motor A2 signal_  | [-5v, 5v]  | [ITF- R_reserved](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-R_reserved)  | _reserved track_  |  | [ITF-S_3_3v](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-S_3_3v)  | _3.3v alimentation_  | [3.3v, 3.3v]   
+Hyacinthe Hyacinthe , je me rends compte qu'on a pas validé définitivement les noms des interfaces. Même si on est globalement d'accord, pour que l'ensemble du dépot Git, de la doc, des schémas des sources soit un tout cohérent il faut qu'on utilise tous exactement les mêmes noms. J'avais donc proposé les termes suivants :   **Name** **Title** **Amplitude**  | [ITF-A_gnd](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-A_gnd)  | _Ground_  | [0v, 0v]  | [ITF-B_5v](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-B_5v)  | _5v alimentation_  | [5v, 5v]  | [ITF- C_amplified_raw_signal](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-C_amplified_raw_signal)  | _Amplified raw signal_  | [0v, 2v]  | [ITF- D_amplified_filtered_signal](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-D_amplified_filtered_signal)  | _Amplified filtered signal_  | [0v, 2v]  | [ITF- E_signal_envelope](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-E_signal_envelope)  | _Signal envelope_  | [0v, 2v]  | [ITF-F_12v](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-F_12v)  | _12v alimentation_  | [12v, 12v]  | [ITF- G_amplifier_gain](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-G_amplifier_gain)  | _Amplifier gain_  | [0v, 1v]  | [ITF- H_neg_12v](https://github.com/Bivi/medicotechnical/blob/master/interfaces/ITF- H_neg_12v)  | _-12v alimentation_  | [-12v, -12v]  | [ITF- I_pulse_on](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-I_pulse_on)  | _Pulse on_  | [0v, 5v]  | [ITF- J_pulse_off](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-J_pulse_off)  | _Pulse off_  | [0v, 5v]  | [ITF- K_pulse_redpitaya](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-K_pulse_redpitaya)  | _Pulse info for Redpitaya_  | [0v, 5v]  | [ITF- L_18v_alimentation](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-L_18v_alimentation)  | _18v external alimentation_  | [15v, 20v]  | [ITF- M_abs_angle](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-M_abs_angle)  | _Absolute tranducer position_  | [0v, 5v]  | [ITF- N_cc_motor_pwm](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-N_cc_motor_pwm)  | _CC motor pwm_  | [0v, 5v]  | [ITF- N_stepper_b2](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-N_stepper_b2)  | _Stepper motor B2 signal_  | [-5v, 5v]  | [ITF- O_cc_motor_encoder](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-O_cc_motor_encoder)  | _CC motor incremental encoder_  | [0v, 5v]  | [ITF- O_stepper_b1](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-O_stepper_b1)  | _Stepper motor B1 signal_  | [-5v, 5v]  | [ITF- P_stepper_a1](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-P_stepper_a1)  | _Stepper motor A1 signal_  | [-5v, 5v]  | [ITF- Q_stepper_a2](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-Q_stepper_a2)  | _Stepper motor A2 signal_  | [-5v, 5v]  | [ITF- R_reserved](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-R_reserved)  | _reserved track_  |  | [ITF-S_3_3v](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-S_3_3v)  | _3.3v alimentation_  | [3.3v, 3.3v]   
 
  * Si les lettres posent un pb on peut revenir sur 2 chiffres  * Si des termes ne conviennent pas on peut encore changer sans problème pour l'instant. Mais ce sera plus compliqué dès qu'ils commenceront à être utilisés dans les sources.
 
@@ -196,7 +196,7 @@ Les ITF C,D et E sont dans la fourchette (0, 2.5V).  G je mettrais plutôt gain 
 
 ### **Hyacinthe** - 2016-04-21 at 10:50 AM
 
-![Hyacinthe, hardware thinker at echopen](./../../zz_assets/images/avatars/782574.png) Hyacinthe , oui, bien sûr, c'est le principe. On peut même le traduire ;-)  ![Hyacinthe, Danseur du ventre at echopen](./../../zz_assets/images/avatars/1248689.png) Hyacinthe , va pour ITF- G_gain_control. Et je corrigerai les amplitudes. Par contre pas de majuscules dans les nom des interfaces hors ITF et la lettre (plus facile à parser ensuite) par contre dans la partie Title en clair, pas de pb je le ferai.
+Hyacinthe Hyacinthe , va pour ITF- G_gain_control. Et je corrigerai les amplitudes. Par contre pas de majuscules dans les nom des interfaces hors ITF et la lettre (plus facile à parser ensuite) par contre dans la partie Title en clair, pas de pb je le ferai.
 
 ### **Hyacinthe** - 2016-04-21 at 3:20 PM
 
@@ -208,11 +208,11 @@ b1, a1 ce n'est pas très explicite...
 
 ### **Hyacinthe** - 2016-04-21 at 3:41 PM
 
-Moi ça me va :)  ![Hyacinthe, Community & knowledge at echopen](./../../zz_assets/images/avatars/1269172.png) Hyacinthe Personnellement je trouve alimentation très bien, pourquoi potentiel?  a1,b1 sont les noms des entrées sur un moteur pas à pas :) A et B représentent les bobines et les chiffres la phase si je dis pas de bêtises
+Moi ça me va :)  Hyacinthe Hyacinthe Personnellement je trouve alimentation très bien, pourquoi potentiel?  a1,b1 sont les noms des entrées sur un moteur pas à pas :) A et B représentent les bobines et les chiffres la phase si je dis pas de bêtises
 
 ### **Hyacinthe** - 2016-04-22 at 11:42 AM
 
-Màj de la tables des interfaces (<https://github.com/Bivi/medicotechnical/blob/master/doc/build/configurations.md>) :  **  Name** **Title** **Amplitude**  | [ITF-A_gnd](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-A_gnd)  | _Ground_  | [0V]  | [ITF-B_5v](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-B_5v)  | _5V alimentation_  | [5V, 5V]  | [ITF- C_amplified_raw_signal](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-C_amplified_raw_signal)  | _Amplified raw signal_  | [0V, 2.5V]  | [ITF- D_amplified_filtered_signal](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-D_amplified_filtered_signal)  | _Amplified filtered signal_  | [0V, 2.5V]  | [ITF- E_signal_envelope](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-E_signal_envelope)  | _Signal envelope_  | [0V, 2.5V]  | [ITF-F_12v](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-F_12v)  | _12V alimentation_  | [12V, 12V]  | [ITF- G_gain_control](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-G_gain_control)  | _Amplifier gain_  | [0V, 1V]  | [ITF- H_neg_12v](https://github.com/Bivi/medicotechnical/blob/master/interfaces/ITF- H_neg_12v)  | _-12V alimentation_  | [-12V, -12V]  | [ITF- I_pulse_on](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-I_pulse_on)  | _Pulse on_  | [0V, 3.3V-5V]  | [ITF- J_pulse_off](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-J_pulse_off)  | _Pulse off_  | [0V, 5V]  | [ITF- K_pulse_redpitaya](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-K_pulse_redpitaya)  | _Pulse info for Redpitaya_  | [0V, 3.3V]  | [ITF- L_18v_alimentation](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-L_18v_alimentation)  | _18V external alimentation_  | [15V, 20V]  | [ITF- M_abs_angle](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-M_abs_angle)  | _Absolute tranducer position_  | [0V, 5V]  | [ITF- N_cc_motor_pwm](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-N_cc_motor_pwm)  | _CC motor pwm_  | [0V, 5V]  | [ITF- N_stepper_b2](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-N_stepper_b2)  | _Stepper motor B2 signal_  | [-5V, 5V]  | [ITF- O_cc_motor_encoder](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-O_cc_motor_encoder)  | _CC motor incremental encoder_  | [0V, 5V]  | [ITF- O_stepper_b1](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-O_stepper_b1)  | _Stepper motor B1 signal_  | [-5V, 5V]  | [ITF- P_stepper_a1](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-P_stepper_a1)  | _Stepper motor A1 signal_  | [-5V, 5V]  | [ITF- Q_stepper_a2](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-Q_stepper_a2)  | _Stepper motor A2 signal_  | [-5V, 5V]  | [ITF- R_reserved](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-R_reserved)  | _reserved track_  |  | [ITF-S_3_3v](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-S_3_3v)  | _3.3V alimentation_  | [3.3V, 3.3V]   ![Hyacinthe, Community & knowledge at echopen](./../../zz_assets/images/avatars/1269172.png) Hyacinthe effectivement, dans "potentiel",  ce qui est important c'est la tension (une tension de référence, par ex.) par contre dans "alimentation", c'est plus la puissance : on va devoir débiter un courant sous cette tension. D'ailleurs à terme on devra spécifier les courants max consommés par chaque module pour dimensionner correctement les modules d'alimentation.
+Màj de la tables des interfaces (<https://github.com/Bivi/medicotechnical/blob/master/doc/build/configurations.md>) :  **  Name** **Title** **Amplitude**  | [ITF-A_gnd](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-A_gnd)  | _Ground_  | [0V]  | [ITF-B_5v](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-B_5v)  | _5V alimentation_  | [5V, 5V]  | [ITF- C_amplified_raw_signal](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-C_amplified_raw_signal)  | _Amplified raw signal_  | [0V, 2.5V]  | [ITF- D_amplified_filtered_signal](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-D_amplified_filtered_signal)  | _Amplified filtered signal_  | [0V, 2.5V]  | [ITF- E_signal_envelope](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-E_signal_envelope)  | _Signal envelope_  | [0V, 2.5V]  | [ITF-F_12v](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-F_12v)  | _12V alimentation_  | [12V, 12V]  | [ITF- G_gain_control](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-G_gain_control)  | _Amplifier gain_  | [0V, 1V]  | [ITF- H_neg_12v](https://github.com/Bivi/medicotechnical/blob/master/interfaces/ITF- H_neg_12v)  | _-12V alimentation_  | [-12V, -12V]  | [ITF- I_pulse_on](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-I_pulse_on)  | _Pulse on_  | [0V, 3.3V-5V]  | [ITF- J_pulse_off](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-J_pulse_off)  | _Pulse off_  | [0V, 5V]  | [ITF- K_pulse_redpitaya](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-K_pulse_redpitaya)  | _Pulse info for Redpitaya_  | [0V, 3.3V]  | [ITF- L_18v_alimentation](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-L_18v_alimentation)  | _18V external alimentation_  | [15V, 20V]  | [ITF- M_abs_angle](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-M_abs_angle)  | _Absolute tranducer position_  | [0V, 5V]  | [ITF- N_cc_motor_pwm](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-N_cc_motor_pwm)  | _CC motor pwm_  | [0V, 5V]  | [ITF- N_stepper_b2](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-N_stepper_b2)  | _Stepper motor B2 signal_  | [-5V, 5V]  | [ITF- O_cc_motor_encoder](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-O_cc_motor_encoder)  | _CC motor incremental encoder_  | [0V, 5V]  | [ITF- O_stepper_b1](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-O_stepper_b1)  | _Stepper motor B1 signal_  | [-5V, 5V]  | [ITF- P_stepper_a1](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-P_stepper_a1)  | _Stepper motor A1 signal_  | [-5V, 5V]  | [ITF- Q_stepper_a2](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-Q_stepper_a2)  | _Stepper motor A2 signal_  | [-5V, 5V]  | [ITF- R_reserved](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-R_reserved)  | _reserved track_  |  | [ITF-S_3_3v](https://github.com/Bivi/medicotechnical/blob/master/interfaces /ITF-S_3_3v)  | _3.3V alimentation_  | [3.3V, 3.3V]   Hyacinthe Hyacinthe effectivement, dans "potentiel",  ce qui est important c'est la tension (une tension de référence, par ex.) par contre dans "alimentation", c'est plus la puissance : on va devoir débiter un courant sous cette tension. D'ailleurs à terme on devra spécifier les courants max consommés par chaque module pour dimensionner correctement les modules d'alimentation.
 
 ### **Hyacinthe** - 2016-04-24 at 4:01 PM
 
@@ -220,5 +220,5 @@ Excellent!   Un petit point, que je penses tu as réglé à coup de reverse quot
 
 ### **Hyacinthe** - 2016-07-10 at 8:54 AM
 
-Bon, histoire de continuer sur les modules, le module 'TGC-Enveloppe-Ampli- ADC' est né! Goblin de son petit nom (histoire de rester dans la thématique des modules). Sa doc (et les premiers tests) se trouvent sur [https://github.com/Hyacinthe124/echomods/tree/master/goblin](https://github.com/Hyacinthe124/echomods/tree/master/goblin%20)   Encore qques points à vérifier, mais le nouveau né semble avoir toutes ses pins, dans l'ordre, et fonctionelles, donc intégrables sur la carte mère plutot directement =)   Reste à tester avec une meilleure alim, et également tester les limites de l'ADC (avec un Raspberry Pi Zero, un BBB, ... tout ce qui a du SPI en fait!
+Bon, histoire de continuer sur les modules, le module 'TGC-Enveloppe-Ampli- ADC' est né! Goblin de son petit nom (histoire de rester dans la thématique des modules). Sa doc (et les premiers tests) se trouvent sur [https://github.com/kelu124/echomods/tree/master/goblin](https://github.com/kelu124/echomods/tree/master/goblin%20)   Encore qques points à vérifier, mais le nouveau né semble avoir toutes ses pins, dans l'ordre, et fonctionelles, donc intégrables sur la carte mère plutot directement =)   Reste à tester avec une meilleure alim, et également tester les limites de l'ADC (avec un Raspberry Pi Zero, un BBB, ... tout ce qui a du SPI en fait!
 
