--- a/bc3-data/116455094.md
+++ b/bc3-data/116455094.md
@@ -4,7 +4,7 @@ un thread autour de l'app, native, semi-native ou web
 
 ### **Hyacinthe** - 2016-04-28 at 5:13 PM
 
-installé un ide collboratif sur cloud9   pour y accéder   <https://ide.c9.io/newben/echotest>   toutes les utilités de python sont installés en natif sur le cloud : pip, virtualenv...   version python 2.7.6 ![Hyacinthe, echopen](./../../zz_assets/images/avatars/2157822.png) Hyacinthe ![Hyacinthe, Danseur du ventre at echopen](./../../zz_assets/images/avatars/1248689.png) Hyacinthe si vous avez des habitudes sur d'autres versions, notamment les plus récentes, dites-moi
+installé un ide collboratif sur cloud9   pour y accéder   <https://ide.c9.io/newben/echotest>   toutes les utilités de python sont installés en natif sur le cloud : pip, virtualenv...   version python 2.7.6 Hyacinthe Hyacinthe si vous avez des habitudes sur d'autres versions, notamment les plus récentes, dites-moi
 
  
 
@@ -28,15 +28,15 @@ scipy installé   ![Hyacinthe, echopen](./../../zz_assets/images/avatars/2157822
 
 ### **Hyacinthe** - 2016-04-28 at 5:55 PM
 
-Sweet ! Tu minvites dessus? Id: Hyacinthe124   Avec mon coloc on avait comparé les deux, c9 en termes de ux générale l'emportait. Ensuite, on était sur une App rails "standard" donc le plan gratuit était largement suffisant :)   Pour tes 3 points, vla un peu de food for thoughts ci dessous :)   \- Pour déjà travailler sur des images, il y a le dump <https://github.com/Hyacinthe124/murgen-dev- kit/blob/master/software/examples/Readme.md> qui liste qques images brutes (en sortie d'acquisition) - on avait échangé sur le format, il a été utilisé là :) . On connaît les caractéristiques de l'image, et celles du fantôme, donc on peut essayer de reconstruire des images avec différents algos :) le nom des fichiers est le md5 de l'image brute. Peuvent ils être servis par le serveur de Michel ? Y'a déjà les thumbs :)  \- Les specs du fantôme: il y aura une image du fantôme avec une règle, comme ça ça en donnera les specs de base.  \- Output: oui, qu'attendre en output? Une image? Un temps de conversion? Une notation par un médecin? Quel kpi ?   Y'a déjà de quoi jouer un peu :)
+Sweet ! Tu minvites dessus? Id: kelu124   Avec mon coloc on avait comparé les deux, c9 en termes de ux générale l'emportait. Ensuite, on était sur une App rails "standard" donc le plan gratuit était largement suffisant :)   Pour tes 3 points, vla un peu de food for thoughts ci dessous :)   \- Pour déjà travailler sur des images, il y a le dump <https://github.com/kelu124/murgen-dev- kit/blob/master/software/examples/Readme.md> qui liste qques images brutes (en sortie d'acquisition) - on avait échangé sur le format, il a été utilisé là :) . On connaît les caractéristiques de l'image, et celles du fantôme, donc on peut essayer de reconstruire des images avec différents algos :) le nom des fichiers est le md5 de l'image brute. Peuvent ils être servis par le serveur de Michel ? Y'a déjà les thumbs :)  \- Les specs du fantôme: il y aura une image du fantôme avec une règle, comme ça ça en donnera les specs de base.  \- Output: oui, qu'attendre en output? Une image? Un temps de conversion? Une notation par un médecin? Quel kpi ?   Y'a déjà de quoi jouer un peu :)
 
 ### **Hyacinthe** - 2016-04-30 at 9:11 AM
 
-![Hyacinthe, echopen](./../../zz_assets/images/avatars/782178.png) lacenne tu as aussi codeanywhere :)
+Hyacinthe lacenne tu as aussi codeanywhere :)
 
 ### **Hyacinthe** - 2016-05-01 at 5:06 PM
 
-Pour les fantomes utilisés dans les exemples cités, ca se passe sur <https://github.com/Hyacinthe124/murgen-dev- kit/blob/master/software/examples/Readme.md>  -- rubrique "Specs des fantomes". Ca peut etre l'occasion d'une part de tester des algos de scan conversion et de traitement de l'image (reduction du bruit?) -- tout en faisant de la segmentation.
+Pour les fantomes utilisés dans les exemples cités, ca se passe sur <https://github.com/kelu124/murgen-dev- kit/blob/master/software/examples/Readme.md>  -- rubrique "Specs des fantomes". Ca peut etre l'occasion d'une part de tester des algos de scan conversion et de traitement de l'image (reduction du bruit?) -- tout en faisant de la segmentation.
 
 ### **Hyacinthe** - 2016-05-03 at 7:27 PM
 
@@ -48,7 +48,7 @@ je t'y ai invité - je regarde le reste
 
 ### **Hyacinthe** - 2016-05-13 at 9:14 PM
 
-![Hyacinthe, echopen](./../../zz_assets/images/avatars/2157822.png) Hyacinthe le cloud9 est installé avec 1 bench de scanconversion façon OpenCV/python  ![Hyacinthe, Danseur du ventre at echopen](./../../zz_assets/images/avatars/1248689.png) Hyacinthe j'ai installé octave. dis-moi si tu vois d'autres packages utiles   next step, installer les utilités pour monitoring de perf   fabriquer un script qui compare I/O de la soumission avec le bench.   à cette fin , discussion des KPI qd vous voulez
+Hyacinthe Hyacinthe j'ai installé octave. dis-moi si tu vois d'autres packages utiles   next step, installer les utilités pour monitoring de perf   fabriquer un script qui compare I/O de la soumission avec le bench.   à cette fin , discussion des KPI qd vous voulez
 
 ### **Hyacinthe** - 2016-06-22 at 9:58 AM
 
@@ -60,11 +60,11 @@ mise en place de l'infra tests sur VM et sans VM   mise en place de tests unitai
 
 ### **Hyacinthe** - 2016-07-09 at 1:01 AM
 
-[1 ptit écusson sur la page github]   ![Hyacinthe, Libre faiseur at echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe on franchit un cap qualité sur l'app -&gt; elle vient de passer sous CI ;)   Github n'intègre malheureusement pas Jenkins donc j'ai utilisé Travis, 1 rmq : usage plus simple pour les tâches habituelles mais twistés pour les besoins customs (genre ndk &amp; such)   en tout cas le build passe et on a notre petite écusson sur la page github ;)   <https://github.com/echopen/android-app>   je ferai l'update sur le wiki pour les règles de soumission qui désormais devront passer le build   dès que j'ai une fenêtre de tir je m'occupe de la couverture de code - j'ai rédigé pas mal de tests mais on doit être à peine à 10 % -  -&gt; d'une part ca complétera les labels et bon signal qualité pour les contributeurs à venir  -&gt; par ailleurs, ca donne une métrique pour un challenge -&gt; genre passer notre code coverage à 99% ! 1 #hackathon de rentrée ? ;)
+[1 ptit écusson sur la page github]   Hyacinthe Hyacinthe on franchit un cap qualité sur l'app -&gt; elle vient de passer sous CI ;)   Github n'intègre malheureusement pas Jenkins donc j'ai utilisé Travis, 1 rmq : usage plus simple pour les tâches habituelles mais twistés pour les besoins customs (genre ndk &amp; such)   en tout cas le build passe et on a notre petite écusson sur la page github ;)   <https://github.com/echopen/android-app>   je ferai l'update sur le wiki pour les règles de soumission qui désormais devront passer le build   dès que j'ai une fenêtre de tir je m'occupe de la couverture de code - j'ai rédigé pas mal de tests mais on doit être à peine à 10 % -  -&gt; d'une part ca complétera les labels et bon signal qualité pour les contributeurs à venir  -&gt; par ailleurs, ca donne une métrique pour un challenge -&gt; genre passer notre code coverage à 99% ! 1 #hackathon de rentrée ? ;)
 
 ### **Hyacinthe** - 2016-07-16 at 11:54 PM
 
-après discussion avec ![Hyacinthe, echopen](./../../zz_assets/images/avatars/791737.png) Hyacinthe   cet am, lundi on va proposer une architecture pour un site lisible, qu'à base de gitbooks. c une propale hein ;) qui aura pour mérite de  l'architecture et de la synchronisation de la base de connaissance avec github   une conséquence pratique sera de mener une refonte de l'orga des  repo.   btw, ![Hyacinthe, echopen](./../../zz_assets/images/avatars/2157822.png) Hyacinthe en collatéral de l'holacratie, ce serait pas mal d'adopter un  [Contributor Covenant](http://contributor- covenant.org/version/1/4/code_of_conduct.md), dont `rails` est adopteur
+après discussion avec Hyacinthe Hyacinthe en collatéral de l'holacratie, ce serait pas mal d'adopter un  [Contributor Covenant](http://contributor- covenant.org/version/1/4/code_of_conduct.md), dont `rails` est adopteur
 
 ### **Hyacinthe** - 2016-07-17 at 10:06 AM
 
@@ -76,7 +76,7 @@ il n'y a pas de tels threads dédiés, orga, suis pas sur que ca soit pertinent 
 
 ### **Hyacinthe** - 2016-07-18 at 12:38 PM
 
-Il faudrait discuter de l'architecture du site avec un "pro" du domaine.   Comme je t'ai la semaine dernière ![Hyacinthe, echopen](./../../zz_assets/images/avatars/782178.png) lacenne , j'ai un contributeur pour monter un site web. Ce fut son boulot à une époque.
+Il faudrait discuter de l'architecture du site avec un "pro" du domaine.   Comme je t'ai la semaine dernière Hyacinthe lacenne , j'ai un contributeur pour monter un site web. Ce fut son boulot à une époque.
 
 ### **Hyacinthe** - 2016-07-18 at 12:39 PM
 
@@ -92,7 +92,7 @@ Pas mal - un dev RoR en somme. Moins orienté architecture de contenu though.   
 
 ### **Hyacinthe** - 2016-07-18 at 1:37 PM
 
-hello, merci ![Hyacinthe, Danseur du ventre at echopen](./../../zz_assets/images/avatars/1248689.png) Hyacinthe simplement il avait l'air chaud pour faire du test sur android. IL connait java. C un plus stimulant pour un bon dev que du faire du rails. Btw, tout est en place pour l'écriture de tests config : templating de base, base de helper, structure de mocking   Du coup, pour un site statique, on peut mettre david sur le coup. Il faut voir si un générateur est le mieux, on en discute ce soir ;)
+hello, merci Hyacinthe Hyacinthe simplement il avait l'air chaud pour faire du test sur android. IL connait java. C un plus stimulant pour un bon dev que du faire du rails. Btw, tout est en place pour l'écriture de tests config : templating de base, base de helper, structure de mocking   Du coup, pour un site statique, on peut mettre david sur le coup. Il faut voir si un générateur est le mieux, on en discute ce soir ;)
 
 ### **Hyacinthe** - 2016-07-18 at 1:43 PM
 
@@ -104,7 +104,7 @@ Que demande le peuple !
 
 ### **Hyacinthe** - 2016-08-13 at 2:31 PM
 
-![David Isnard, Dev php js html css symfony2 nodejs at echopen](./../../zz_assets/images/avatars/4693510.png) David a terminé le travail entamé il y a quelques mois par Mathieu Régnier
+Hyacinthe David a terminé le travail entamé il y a quelques mois par Mathieu Régnier
 
 interface node de récupération de données depuis la sonde dans l’aquarium
 
