--- a/bc3-data/119175644.md
+++ b/bc3-data/119175644.md
@@ -8,7 +8,7 @@ Excellent modèle, intéressant! Pour clarifier, est ce que le signal (en vert) 
 
 ### **Hyacinthe** - 2016-05-03 at 7:43 PM
 
-En image : <https://github.com/Hyacinthe124/murgen-dev- kit/blob/master/worklog/Session_8.md>   A 1Msps on a très peu de finesse, et 2.5Msps est clairement plus proche de 5Msps que de 1Msps =)
+En image : <https://github.com/kelu124/murgen-dev- kit/blob/master/worklog/Session_8.md>   A 1Msps on a très peu de finesse, et 2.5Msps est clairement plus proche de 5Msps que de 1Msps =)
 
 ### **Hyacinthe** - 2016-05-04 at 9:27 AM
 
@@ -30,7 +30,7 @@ Si j'interprète bien la boucle sur k, tu dis que la valeur d'un pixel est égal
 
 ### **Hyacinthe** - 2016-05-04 at 10:18 AM
 
-L'effet de moyenne est surtout (je pense) du au redimensionnement de l'image : à 1Msps, l'image sans redimensionnement (normalization) fait cette taille : <https://github.com/Hyacinthe124/murgen-dev- kit/blob/master/worklog/Images/Session_8/source_files/2c10128b362d2e1652c1b97111ba0ae2 .data-DEC5-SC-4T.png>   Effectivement, c'est la bonne boucle dans le bon script. Jpeux rajouter un comparatif de l'image a 1Msps avec un point choisi au pif parmis les DEC points, ca sera plus rigoureux =) A vue de nez, ca introduira une image plus "piquée", mais le redimensionnement ultérieur va de toutes facons "lisser" ces pics.   A voir donc avec cet effet de randomization des points de l'image, bien vu!
+L'effet de moyenne est surtout (je pense) du au redimensionnement de l'image : à 1Msps, l'image sans redimensionnement (normalization) fait cette taille : <https://github.com/kelu124/murgen-dev- kit/blob/master/worklog/Images/Session_8/source_files/2c10128b362d2e1652c1b97111ba0ae2 .data-DEC5-SC-4T.png>   Effectivement, c'est la bonne boucle dans le bon script. Jpeux rajouter un comparatif de l'image a 1Msps avec un point choisi au pif parmis les DEC points, ca sera plus rigoureux =) A vue de nez, ca introduira une image plus "piquée", mais le redimensionnement ultérieur va de toutes facons "lisser" ces pics.   A voir donc avec cet effet de randomization des points de l'image, bien vu!
 
 ### **Hyacinthe** - 2016-05-04 at 10:35 AM
 
@@ -54,7 +54,7 @@ Oui donc en faisant un moyennage tu n'as pas fait une décimation mais changé l
 
 ### **Hyacinthe** - 2016-05-04 at 6:06 PM
 
-Comparatif done at : <https://github.com/Hyacinthe124/murgen-dev- kit/blob/master/worklog/Session_8.md> et les sources (en quick and dirty : <https://github.com/Hyacinthe124/murgen-dev- kit/tree/master/worklog/Images/Session_8/source_files> ) en particulier le makeTest.sh Hope that helps!   (edit : Session_8bis -&gt; Session_8 updated)
+Comparatif done at : <https://github.com/kelu124/murgen-dev- kit/blob/master/worklog/Session_8.md> et les sources (en quick and dirty : <https://github.com/kelu124/murgen-dev- kit/tree/master/worklog/Images/Session_8/source_files> ) en particulier le makeTest.sh Hope that helps!   (edit : Session_8bis -&gt; Session_8 updated)
 
 ### **Hyacinthe** - 2016-05-09 at 8:23 AM
 
