--- a/bc3-data/123491650.md
+++ b/bc3-data/123491650.md
@@ -4,11 +4,11 @@ Hello à tous,   Suite à une rencontre ce matin avec Maxime, un urgentiste de l
 
  1. Présentation et retours d'expériences des urgentistes de LARIBOISIÈRE (2 ans avec un Vscan + formations à l'échographie clinique) + 2 ou 3 cas cliniques   2. Brainstorm et itération avec la communauté =&gt; Quel besoin médical   3. Déjeuner   4. Convergence et expression du besoin médical   5. Synthèse  6. Ouverture sur les enjeux de formation 
 
-  ![Hyacinthe, Community & knowledge at echopen](./../../zz_assets/images/avatars/1269172.png) Hyacinthe , je sais que le sujet t'intéresse, serais tu dispo pour nous aider dans l'organisation ?  ![Hyacinthe, Contributeur méthodologie at echopen](./../../zz_assets/images/avatars/1269173.png) Hyacinthe , Comment nous conseilles tu de structurer la définition de ce besoin ?   @All, vos retours et votre présence seront/sera bienvenue.
+  Hyacinthe Hyacinthe , Comment nous conseilles tu de structurer la définition de ce besoin ?   @All, vos retours et votre présence seront/sera bienvenue.
 
 ### **Hyacinthe** - 2016-05-10 at 9:40 PM
 
-![Hyacinthe, echopen](./../../zz_assets/images/avatars/791737.png) Hyacinthe  Tout dépend des dates qu'ils te donnent, sur le principe, très motivée !
+Hyacinthe Hyacinthe  Tout dépend des dates qu'ils te donnent, sur le principe, très motivée !
 
 ### **Hyacinthe** - 2016-05-10 at 9:41 PM
 
@@ -20,11 +20,11 @@ en effet, on est mûr pour réfléchir au portage de la formation en ligne -&gt;
 
 ### **Hyacinthe** - 2016-05-11 at 9:38 AM
 
-Hello,   Merci ![Hyacinthe, Community & knowledge at echopen](./../../zz_assets/images/avatars/1269172.png) Hyacinthe pour ton retour. Je pense qu'il est surtout important de voir, qui dans les médecins de la communauté sont prêts à accompagner l'enjeu de formation, car il est évident que nous n'aurons pas suffisamment de temps pour aller au delà d'une simple définition du scope et de la mobilisation des médecins présents sur cet enjeu.   Dès que je reçois leurs propositions de dates, je vous les communique.   Il va aussi falloir que nous définissions la liste des éléments sur lesquels nous souhaitons que les médecins se prononcent dans cette définition du besoin médical.   @+
+Hello,   Merci Hyacinthe Hyacinthe pour ton retour. Je pense qu'il est surtout important de voir, qui dans les médecins de la communauté sont prêts à accompagner l'enjeu de formation, car il est évident que nous n'aurons pas suffisamment de temps pour aller au delà d'une simple définition du scope et de la mobilisation des médecins présents sur cet enjeu.   Dès que je reçois leurs propositions de dates, je vous les communique.   Il va aussi falloir que nous définissions la liste des éléments sur lesquels nous souhaitons que les médecins se prononcent dans cette définition du besoin médical.   @+
 
 ### **Hyacinthe** - 2016-05-11 at 2:00 PM
 
-Séance de travail rapide cet après-midi avec ![Hyacinthe, Contributeur méthodologie at echopen](./../../zz_assets/images/avatars/1269173.png) Hyacinthe pour tenter de poser les bases d'un cadre de définition du besoin médical.   Le document est disponible sur le drive et [ici](https://docs.google.com/document/d/1GFbr_EVgpueh3udHefIvB8nSU5UNe2lCPHE3wb8Vs0M/edit#).   ![Hyacinthe, echopen](./../../zz_assets/images/avatars/782178.png) lacenne , ![Hyacinthe, Community & knowledge at echopen](./../../zz_assets/images/avatars/1269172.png) Hyacinthe et tous les autres, je vous invite à y jeter un oeil et à ajouter vos commentaires, remarques &amp; such pour ensuite l'envoyer aux urgentistes de Lariboisière en vue du CAPMed.  L'objectif de ce document est d'être un cadre de travail pour la définition des besoins d'usages afin d'en déduire les exigences et les spéc. techniques nécessaires pour le développement de la sonde et enfin, de prioriser les applications médicales.   @+
+Séance de travail rapide cet après-midi avec Hyacinthe Hyacinthe et tous les autres, je vous invite à y jeter un oeil et à ajouter vos commentaires, remarques &amp; such pour ensuite l'envoyer aux urgentistes de Lariboisière en vue du CAPMed.  L'objectif de ce document est d'être un cadre de travail pour la définition des besoins d'usages afin d'en déduire les exigences et les spéc. techniques nécessaires pour le développement de la sonde et enfin, de prioriser les applications médicales.   @+
 
 ### **Hyacinthe** - 2016-05-11 at 5:09 PM
 
@@ -36,7 +36,7 @@ J'ai lu rapidement et c'est top ! Il y a une chose importante à rajouter : Quan
 
 ### **Hyacinthe** - 2016-05-11 at 5:18 PM
 
-Merci ![Hyacinthe, Community & knowledge at echopen](./../../zz_assets/images/avatars/1269172.png) Hyacinthe pour ton retour. Pour ce qui est de la qualification et quantification des usages, c'est ce que propose la dernière partie du document. N'hésites pas à clarifier si cela n'est pas suffisamment clair.   L'aspect télémédecine devrait apparaitre dans les cas d'usages qu'on déduira avec les médecins, ce qui nous permettra d'ailleurs de le valider. On est resté pour le moment à un niveau framework générique, sans rentrer dans trop de détails. La prochaine étape sera de réaliser la matrice et de la remplir petit à petit et surtout lors du CAPMed.   A bientôt,
+Merci Hyacinthe Hyacinthe pour ton retour. Pour ce qui est de la qualification et quantification des usages, c'est ce que propose la dernière partie du document. N'hésites pas à clarifier si cela n'est pas suffisamment clair.   L'aspect télémédecine devrait apparaitre dans les cas d'usages qu'on déduira avec les médecins, ce qui nous permettra d'ailleurs de le valider. On est resté pour le moment à un niveau framework générique, sans rentrer dans trop de détails. La prochaine étape sera de réaliser la matrice et de la remplir petit à petit et surtout lors du CAPMed.   A bientôt,
 
 ### **Hyacinthe** - 2016-05-13 at 2:50 PM
 
@@ -56,7 +56,7 @@ Bonjour à tous,   Une nouvelle version du document est désormais disponible av
 
 ### **Hyacinthe** - 2016-05-13 at 11:59 PM
 
-pour moi le 18 est OK. Etienne Englais de KB est ok ?  ![Hyacinthe, echopen](./../../zz_assets/images/avatars/791737.png) Hyacinthe   comment s'appelle l'echo-pneumologue avec lequel on s'était entretenu il y a un an ? ca peut être intéressant de l'avoir avec nous.   dès que la date est Ok, je rameute de l'interne et du chef de clinique ;)
+pour moi le 18 est OK. Etienne Englais de KB est ok ?  Hyacinthe Hyacinthe   comment s'appelle l'echo-pneumologue avec lequel on s'était entretenu il y a un an ? ca peut être intéressant de l'avoir avec nous.   dès que la date est Ok, je rameute de l'interne et du chef de clinique ;)
 
 ### **Hyacinthe** - 2016-05-17 at 10:27 AM
 
@@ -94,37 +94,37 @@ Vla qques uns des fichiers échangés sur le groupe FB =)  On profitera du chann
 
 ![](./../../zz_assets/images/previews/5636730-32f6353f5f012be42194e2288025effce83d81177acb2707b6c4afe8bded5f28.png)
 
-](bc3-raw/files/5636730-32f6353f5f012be42194e2288025effce83d81177acb2707b6c4afe8bded5f28.pdf)
+](../bc3-images/5636730-32f6353f5f012be42194e2288025effce83d81177acb2707b6c4afe8bded5f28.pdf)
 
-[32f6353f5f012be42194e2288025effce83d81177acb2707b6c4afe8bded5f28.pdf 146 KB • Download](bc3-raw/files/5636730-32f6353f5f012be42194e2288025effce83d81177acb2707b6c4afe8bded5f28.pdf)
+[32f6353f5f012be42194e2288025effce83d81177acb2707b6c4afe8bded5f28.pdf 146 KB • Download](../bc3-images/5636730-32f6353f5f012be42194e2288025effce83d81177acb2707b6c4afe8bded5f28.pdf)
 
 [
 
 ![](./../../zz_assets/images/previews/5636737-echoscopy-atlas-vscan.png)
 
-](bc3-raw/files/5636737 -echoscopy-atlas-vscan.pdf)
+](../bc3-images/5636737 -echoscopy-atlas-vscan.pdf)
 
-[echoscopy-atlas-vscan.pdf 2.22 MB • Download](bc3-raw/files/5636737 -echoscopy-atlas-vscan.pdf)
+[echoscopy-atlas-vscan.pdf 2.22 MB • Download](../bc3-images/5636737 -echoscopy-atlas-vscan.pdf)
 
 [
 
 ![](./../../zz_assets/images/previews/5636738-horizon-scanning- report0036-ultrasound.png)
 
-](bc3-raw/files/5636738 -horizon-scanning-report0036-ultrasound.pdf)
+](../bc3-images/5636738 -horizon-scanning-report0036-ultrasound.pdf)
 
-[Horizon scanning report0036 Ultrasound.pdf 343 KB • Download](bc3-raw/files/5636738 -horizon-scanning-report0036-ultrasound.pdf)
+[Horizon scanning report0036 Ultrasound.pdf 343 KB • Download](../bc3-images/5636738 -horizon-scanning-report0036-ultrasound.pdf)
 
 [
 
 ![](./../../zz_assets/images/previews/5636739-rfe_ecmu1_2016.png)
 
-](bc3-raw/files/5636739-rfe_ecmu1_2016.pdf)
+](../bc3-images/5636739-rfe_ecmu1_2016.pdf)
 
-[rfe_ecmu1_2016.pdf 322 KB • Download](bc3-raw/files/5636739-rfe_ecmu1_2016.pdf)
+[rfe_ecmu1_2016.pdf 322 KB • Download](../bc3-images/5636739-rfe_ecmu1_2016.pdf)
 
 ### **Hyacinthe** - 2016-05-31 at 8:26 AM
 
-![Hyacinthe, echopen](./../../zz_assets/images/avatars/791737.png) Hyacinthe g fait qqs remarques sur le doc. Pour la partie usage médical, je proposerai qu'on ouvre le gdoc aux contributions remote. Je ferai l'animation sur les groupes facebook de médecins, notamment eppocrate. Si ok, on peut ouvrir le jour même, ou en amont ?
+Hyacinthe Hyacinthe g fait qqs remarques sur le doc. Pour la partie usage médical, je proposerai qu'on ouvre le gdoc aux contributions remote. Je ferai l'animation sur les groupes facebook de médecins, notamment eppocrate. Si ok, on peut ouvrir le jour même, ou en amont ?
 
 ### **Hyacinthe** - 2016-06-06 at 8:47 PM
 
