--- a/bc3-data/128372427.md
+++ b/bc3-data/128372427.md
@@ -68,11 +68,11 @@ Bug identified: les mails de remise à zéro de mots de passe pour le wiki ne ma
 
 ### **Hyacinthe** - 2016-06-01 at 4:02 PM
 
-ca marche maintenant de mon côté - ![Hyacinthe, echopen](./../../zz_assets/images/avatars/2157822.png) Hyacinthe   tu confirmes ?
+ca marche maintenant de mon côté - Hyacinthe Hyacinthe   tu confirmes ?
 
 ### **Hyacinthe** - 2016-06-02 at 8:02 AM
 
-Bizarre, tjrs rien recu :/   Je suppose que l'adresse mail est tjrs [Hyacinthe@echopen.org](mailto:Hyacinthe@echopen.org) dans la DB, peut etre qu'en la changeant en [Hyacinthe124@gmail.com](mailto:Hyacinthe124@gmail.com) la notif arrivera?
+Bizarre, tjrs rien recu :/   Je suppose que l'adresse mail est tjrs [Hyacinthe@echopen.org](mailto:Hyacinthe@echopen.org) dans la DB, peut etre qu'en la changeant en [kelu124@gmail.com](mailto:kelu124@gmail.com) la notif arrivera?
 
 ### **Hyacinthe** - 2016-06-02 at 9:34 AM
 
@@ -104,7 +104,7 @@ Page d'accueil atteinte, 4 IPs différentes spammaient: <http://echopen.org/inde
 
 ### **Hyacinthe** - 2016-07-07 at 5:18 PM
 
-![Hyacinthe, echopen](./../../zz_assets/images/avatars/2157822.png) Hyacinthe   : si tu as déjà implémenté, tu peux prendre la main sur le sujet ?   @++
+Hyacinthe Hyacinthe   : si tu as déjà implémenté, tu peux prendre la main sur le sujet ?   @++
 
 ### **Hyacinthe** - 2016-07-07 at 5:25 PM
 
