--- a/bc3-data/139765501.md
+++ b/bc3-data/139765501.md
@@ -1,6 +1,6 @@
 # Traitement signal et image  - 2016-06-02
 
-la team Traitement d'Image est UP   il s'agit de ![Soobash, Feature extractor at echopen](./../../zz_assets/images/avatars/4399577.png) Soobash ![Zahra Barwane, Image Cleaner at echopen](./../../zz_assets/images/avatars/4179741.png) Zahra (étudiante ISEP)   ils travailleront sur l'interface cloud9   les premiers steps identifiés par soobash sont :   \- débruitage sur image en coordonnées polaires, i.e. avant scan conversion pour que le denoising soit le plus efficace possible : sur images échos + images de synthèse   \- mesure des KPIs et stress test des soumissions d'algo   \- utilisation de fantomes en situation réelle   \- passage à GPU   great ;) !
+la team Traitement d'Image est UP   il s'agit de Hyacinthe Zahra (étudiante ISEP)   ils travailleront sur l'interface cloud9   les premiers steps identifiés par soobash sont :   \- débruitage sur image en coordonnées polaires, i.e. avant scan conversion pour que le denoising soit le plus efficace possible : sur images échos + images de synthèse   \- mesure des KPIs et stress test des soumissions d'algo   \- utilisation de fantomes en situation réelle   \- passage à GPU   great ;) !
 
 ### **Hyacinthe** - 2016-06-07 at 4:40 PM
 
@@ -12,7 +12,7 @@ soobash produit ses premiers filtres de denoising   le process de soumission est
 
 ### **Hyacinthe** - 2016-06-14 at 7:43 PM
 
-Nickel! Suite à nos échanges sur le format de l'image (dont les specs sont r[ésumées ici](https://github.com/Hyacinthe124/murgen-dev- kit/blob/master/software/examples_csv/ReadMe.md) \-- on les valide une bonne fois pour toute pour le stockage des données, good pour toi ![Hyacinthe, echopen](./../../zz_assets/images/avatars/782178.png) lacenne   ?), des images sont [sorties au bon format CSV et prêtes à être exploitées sur ce repo](https://github.com/Hyacinthe124/murgen-dev- kit/tree/master/software/examples_csv).  A noter, le filereader.py devra etre ajusté, et le Hyacinthes.py as well, puisque ces données sont caractéristiques de chaque CSV.
+Nickel! Suite à nos échanges sur le format de l'image (dont les specs sont r[ésumées ici](https://github.com/kelu124/murgen-dev- kit/blob/master/software/examples_csv/ReadMe.md) \-- on les valide une bonne fois pour toute pour le stockage des données, good pour toi Hyacinthe lacenne   ?), des images sont [sorties au bon format CSV et prêtes à être exploitées sur ce repo](https://github.com/kelu124/murgen-dev- kit/tree/master/software/examples_csv).  A noter, le filereader.py devra etre ajusté, et le Hyacinthes.py as well, puisque ces données sont caractéristiques de chaque CSV.
 
 ### **Hyacinthe** - 2016-06-16 at 9:29 AM
 
@@ -28,7 +28,7 @@ Je débarque un peu tard, mais si j'ai bien compris, c'est du CSV avec les meta-
 
 ### **Hyacinthe** - 2016-06-16 at 10:53 AM
 
-@Hyacinthe : indeed, dans le dossier examples_csv, tu as les data au nouveau format, et bzippées. ( <https://github.com/Hyacinthe124/murgen-dev- kit/tree/master/software/examples_csv> ) -- avec un preview des raw data en PNG, classés par timestamp.   @bivi: oui et non, en une passe de fichier, lecture ligne à ligne, tu peux structurer ton jeu de données quand tu construis ton reader. Dans tous les cas, tu dois lire ttes les données, avant de pouvoir tout processer. C'est vrai que les méta en tete du fichier sont plus classiques (exemple du DICOM) mais l'un dans l'autre on n'est pas sur des fichiers monstrueux, et quand on voudra finaliser ca dans un format de distribution on pourra tout encapsuler en DICOM classique.   @Hyacinthe: page challenge et banniere modifiées
+@Hyacinthe : indeed, dans le dossier examples_csv, tu as les data au nouveau format, et bzippées. ( <https://github.com/kelu124/murgen-dev- kit/tree/master/software/examples_csv> ) -- avec un preview des raw data en PNG, classés par timestamp.   @bivi: oui et non, en une passe de fichier, lecture ligne à ligne, tu peux structurer ton jeu de données quand tu construis ton reader. Dans tous les cas, tu dois lire ttes les données, avant de pouvoir tout processer. C'est vrai que les méta en tete du fichier sont plus classiques (exemple du DICOM) mais l'un dans l'autre on n'est pas sur des fichiers monstrueux, et quand on voudra finaliser ca dans un format de distribution on pourra tout encapsuler en DICOM classique.   @Hyacinthe: page challenge et banniere modifiées
 
 ### **Hyacinthe** - 2016-06-16 at 11:14 AM
 
@@ -36,7 +36,7 @@ Bon, prenons le sujet dans l'autre sens ;-) : quel est l'intérêt d'avoir les d
 
 ### **Hyacinthe** - 2016-06-16 at 3:35 PM
 
-ok ![Hyacinthe, echopen](./../../zz_assets/images/avatars/2157822.png) Hyacinthe : j'ai updaté aussi cette page
+ok Hyacinthe Hyacinthe : j'ai updaté aussi cette page
 
 ### **Soobash** - 2016-06-16 at 7:09 PM
 
@@ -84,11 +84,11 @@ soobash a fait un premier algo de débruitage : plus adapté à du débruitage s
 
 ### **Hyacinthe** - 2016-07-07 at 6:00 PM
 
-Si vous voulez vous faire la main sur un signal normalisé acquis a tres haute vitesse, d'un fantome simple, n'hésitez pas à vous faire la main, c'est sur <https://github.com/Hyacinthe124/murgen-dev- kit/blob/master/worklog/Zach/2016-07-06.md> =)   Attention, il s'agit des données brutes, donc vous pouvez aussi simuler le detecteur d'enveloppe avec un Hilbert.   Have fun!
+Si vous voulez vous faire la main sur un signal normalisé acquis a tres haute vitesse, d'un fantome simple, n'hésitez pas à vous faire la main, c'est sur <https://github.com/kelu124/murgen-dev- kit/blob/master/worklog/Zach/2016-07-06.md> =)   Attention, il s'agit des données brutes, donc vous pouvez aussi simuler le detecteur d'enveloppe avec un Hilbert.   Have fun!
 
 ### **Hyacinthe** - 2016-07-21 at 11:28 AM
 
-réu hebdo hier   \- synthèse de revue de la littérature  \- relecture du code de zhara pour script de validation, analyse des soumissions  \- présentation par Hyacinthe shannes des principales métriques de signal-bruit  \- script de testing de toutes les métriques pour la semaine prochaine par ![Soobash, Feature extractor at echopen](./../../zz_assets/images/avatars/4399577.png) Soobash   et ![Zahra Barwane, Image Cleaner at echopen](./../../zz_assets/images/avatars/4179741.png) Zahra   de l'avis de Hyacinthe et ![Soobash, Feature extractor at echopen](./../../zz_assets/images/avatars/4399577.png) Soobash   : on devrait garder des métriques classiques et en déduire métrique qui nous sera propre , sur la base de quoi ![Soobash, Feature extractor at echopen](./../../zz_assets/images/avatars/4399577.png) Soobash  propose une publication
+réu hebdo hier   \- synthèse de revue de la littérature  \- relecture du code de zhara pour script de validation, analyse des soumissions  \- présentation par Hyacinthe shannes des principales métriques de signal-bruit  \- script de testing de toutes les métriques pour la semaine prochaine par Hyacinthe Soobash  propose une publication
 
 ### **Hyacinthe** - 2016-08-03 at 5:06 PM
 
@@ -102,7 +102,7 @@ Séance hebdo du 10.08.16
 
 \- l’équipage est en vacances et échange d’ordre général avec Hyacinthe
 
-\- ![Soobash, Feature extractor at echopen](./../../zz_assets/images/avatars/4399577.png) Soobash livre les scripts de calcul des métriques ces tous prochains jours
+\- Hyacinthe Soobash livre les scripts de calcul des métriques ces tous prochains jours
 
 \- nous sommes rejoint dans la team par Loic, aka hackolite, spécialiste de python
 
@@ -186,11 +186,11 @@ monter un challenge à partir de datasets, soit existant &amp; accessibles via u
 
 ### **Hyacinthe** - 2016-10-20 at 7:11 AM
 
-réu 19.10.16   1) discussion du challenge online qui sera lancé dès que tout est prêt   2) interface web, django app, de récupération, d'analyse des soumissions et de leaderboard achevée thanks @loic;)  @todo :  analyse non d'une image mais d'une boucle d'images + système de login   3) scripts de métriques des soumissions terminés thanks ![Soobash, Feature extractor at echopen](./../../zz_assets/images/avatars/4399577.png) Soobash ;)  @todo constituer les métriques qui nous sont propres   4) demeure la question de l'analyse de la typologie de bruit en vue de pouvoir l'injecter à des "images saines" à des fins d'apprentissage.  C @Hyacinthe qui s'y colle pour la semaine pro thanks;)   oilà !
+réu 19.10.16   1) discussion du challenge online qui sera lancé dès que tout est prêt   2) interface web, django app, de récupération, d'analyse des soumissions et de leaderboard achevée thanks @loic;)  @todo :  analyse non d'une image mais d'une boucle d'images + système de login   3) scripts de métriques des soumissions terminés thanks Hyacinthe Soobash ;)  @todo constituer les métriques qui nous sont propres   4) demeure la question de l'analyse de la typologie de bruit en vue de pouvoir l'injecter à des "images saines" à des fins d'apprentissage.  C @Hyacinthe qui s'y colle pour la semaine pro thanks;)   oilà !
 
 ### **Hyacinthe** - 2016-10-27 at 11:49 PM
 
-réu 27.10.16   1) proposition par ![Soobash, Feature extractor at echopen](./../../zz_assets/images/avatars/4399577.png) Soobash d'un score pour le ranking du leaderboard + discussion sur l'adaptation des métriques de frames d'images   2) évolution de l'interface leaderboard par @hackolite @todo : adaptation de l'algo pour calculer les métriques sur une séquence image, plutôt qu'une image tel que c'est le cas aujourd'hui   3) présentation par @Hyacinthe d'une méthode d'injection sur images de bruit spécifique à l'écho. @todo : implémentation d'un premier réseau de neurones pour débruiter des images;)   nota bene : les réu se tiennent maintenant tous les jeudis !   oilà;)
+réu 27.10.16   1) proposition par Hyacinthe Soobash d'un score pour le ranking du leaderboard + discussion sur l'adaptation des métriques de frames d'images   2) évolution de l'interface leaderboard par @hackolite @todo : adaptation de l'algo pour calculer les métriques sur une séquence image, plutôt qu'une image tel que c'est le cas aujourd'hui   3) présentation par @Hyacinthe d'une méthode d'injection sur images de bruit spécifique à l'écho. @todo : implémentation d'un premier réseau de neurones pour débruiter des images;)   nota bene : les réu se tiennent maintenant tous les jeudis !   oilà;)
 
 ### **Hyacinthe** - 2016-11-10 at 7:41 PM
 
