--- a/bc3-data/145565070.md
+++ b/bc3-data/145565070.md
@@ -1,14 +1,14 @@
 # Sonde d'expérimentation en aquarium  - 2016-06-10
 
-![Hyacinthe, Danseur du ventre at echopen](./../../zz_assets/images/avatars/1248689.png) Hyacinthe , ![Joris JEAN- BAPTISTE, Elec analog & digit + Soft at echopen](./../../zz_assets/images/avatars/4392629.png) Joris , voici quelques infos pour réaliser une sonde d'expérimentation à pincer sur le bord de l'aquarium. 
+Hyacinthe Joris , voici quelques infos pour réaliser une sonde d'expérimentation à pincer sur le bord de l'aquarium. 
 
 [
 
-![](bc3-raw/files/6221602-20160319_194819_hdr.jpg)
+![](../bc3-images/6221602-20160319_194819_hdr.jpg)
 
-](bc3-raw/files/6221602-20160319_194819_hdr.jpg)
+](../bc3-images/6221602-20160319_194819_hdr.jpg)
 
-[20160319_194819_HDR.jpg 4.35 MB • Download](bc3-raw/files/6221602-20160319_194819_hdr.jpg)
+[20160319_194819_HDR.jpg 4.35 MB • Download](../bc3-images/6221602-20160319_194819_hdr.jpg)
 
   **Ingrédients**
 
@@ -20,7 +20,7 @@
 
   Ci-joint, un source, un peu expérimental ;-), en µPython d'une version n'utilisant pas au maximum des timers et qui consomme déjà 22% de CPU sur un STM32F405 à 160 MHz. 
 
-[![](./../../zz_assets/images/file-types/py.png) main-v1.py 3.95 KB • Download](bc3-raw/files/6223271-main-v1.py)
+[![](./../../zz_assets/images/file-types/py.png) main-v1.py 3.95 KB • Download](../bc3-images/6223271-main-v1.py)
 
   PS 1: je ne peux pas passer ce vendredi 10/06 mais je vous prêterai qq composants lundi pour commencer à maniper et éviter de perdre du temps pendant l'appro.   PS 2 : @tous, ce post est peut-être un peu technique pour être déposé sur BaseCamp ? Qu'en pensez-vous ?.**  **
 
