--- a/bc3-data/150456092.md
+++ b/bc3-data/150456092.md
@@ -12,7 +12,7 @@ Non, mais je connais bien les gens d'un labo de l'ENSAM qui fait de la recherche
 
 ### **Hyacinthe** - 2016-06-17 at 9:48 AM
 
-Excellent, merci ![Hyacinthe, Libre faiseur at echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe  je passe le mot et te tiens au courant ;)
+Excellent, merci Hyacinthe Hyacinthe  je passe le mot et te tiens au courant ;)
 
 ### **Hyacinthe** - 2016-06-17 at 3:50 PM
 
@@ -40,7 +40,7 @@ Discussion avec un pote de Withings, qui fait des balances qui mesurent la rigid
 
 ### **Hyacinthe** - 2016-07-13 at 3:14 PM
 
-![Hyacinthe, Electronique at echopen](./../../zz_assets/images/avatars/1249123.png) Hyacinthe tu vas aiiimé : des labs de physiques open source   via ![Hyacinthe, echopen](./../../zz_assets/images/avatars/791737.png) Hyacinthe <http://www.physdev.org/open-source/>   btw, il passe ce lundi est echOpen ;)
+Hyacinthe Hyacinthe <http://www.physdev.org/open-source/>   btw, il passe ce lundi est echOpen ;)
 
 ### **Hyacinthe** - 2016-07-15 at 9:09 AM
 
