--- a/bc3-data/151814533.md
+++ b/bc3-data/151814533.md
@@ -14,7 +14,7 @@ Quelques autres pistes:  **Avec une imp laser:**
 
 **Avec une imp 3D  ** 
 
- * La gravure comme propose ![Hyacinthe, Electronique at echopen](./../../zz_assets/images/avatars/1249123.png) Hyacinthe  * Le dépot du masque directement sur le PCB (<http://www.instructables.com/id/Make-Flexible-Circuit-Boards-Using-A-3D-Printer/>)
+ * La gravure comme propose Hyacinthe Hyacinthe  * Le dépot du masque directement sur le PCB (<http://www.instructables.com/id/Make-Flexible-Circuit-Boards-Using-A-3D-Printer/>)
 
  
 
@@ -22,7 +22,7 @@ Et aussi peut-être en profiter pour se développer une compétence en CMS (comp
 
 ### **Hyacinthe** - 2016-06-21 at 8:56 AM
 
-Très intéressant, l'utilisation d'imprimante, à essayer! Si ça m'est accessible je tente le coup!   Pour compléter ce que dit ![Hyacinthe, Libre faiseur at echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe à propos des CMS, réfléchir sur le sujet me parait aussi important car les CMS ne permettent pas seulement de gagner en place (plus besoin de percer sa carte et le montage est possible en double face assez facilement) mais aussi de gagner en performances  (distorsion en HF, CEM, bruit, etc). Il existe des façons assez simple de braser le CMS grâce à un four à refusion :  <http://wiki.jelectronique.com/doku.php?id=souder_des_cms>
+Très intéressant, l'utilisation d'imprimante, à essayer! Si ça m'est accessible je tente le coup!   Pour compléter ce que dit Hyacinthe Hyacinthe à propos des CMS, réfléchir sur le sujet me parait aussi important car les CMS ne permettent pas seulement de gagner en place (plus besoin de percer sa carte et le montage est possible en double face assez facilement) mais aussi de gagner en performances  (distorsion en HF, CEM, bruit, etc). Il existe des façons assez simple de braser le CMS grâce à un four à refusion :  <http://wiki.jelectronique.com/doku.php?id=souder_des_cms>
 
 ### **Hyacinthe** - 2016-06-21 at 9:07 AM
 
