--- a/bc3-data/164119103.md
+++ b/bc3-data/164119103.md
@@ -80,7 +80,7 @@ OUi à fond !:)
 
 ### **Hyacinthe** - 2016-11-10 at 7:41 PM
 
-Meeting prévu le 17.11.16 avec Eric Deharo de l’IRD avec ![Hyacinthe, Community & knowledge at echopen](./../../zz_assets/images/avatars/1269172.png) Hyacinthe
+Meeting prévu le 17.11.16 avec Eric Deharo de l’IRD avec Hyacinthe Hyacinthe
 
  
 
