--- a/bc3-data/202775646.md
+++ b/bc3-data/202775646.md
@@ -4,7 +4,7 @@ Petit thread dédié.   Première question du coup :) c'est vrai qu'on recherche
 
 ### **Hyacinthe** - 2016-08-19 at 10:51 AM
 
-c pour le pipe maker, c joris qui était dessus cc  ![Hyacinthe, Danseur du ventre at echopen](./../../zz_assets/images/avatars/1248689.png) Hyacinthe
+c pour le pipe maker, c joris qui était dessus cc  Hyacinthe Hyacinthe
 
 ### **Joris JEAN-BAPTISTE** - 2016-08-19 at 12:27 PM
 
@@ -20,11 +20,11 @@ Ensuite,  ça dépend pour quoi on veut d'en servir dans le pipe maker, et quel
 
 ### **Hyacinthe** - 2016-08-19 at 1:01 PM
 
-![Joris JEAN-BAPTISTE, Elec analog & digit + Soft at echopen](./../../zz_assets/images/avatars/4392629.png) Joris ![Hyacinthe, Danseur du ventre at echopen](./../../zz_assets/images/avatars/1248689.png) Hyacinthe your point of view sur beagle bone ?
+Hyacinthe Hyacinthe your point of view sur beagle bone ?
 
 ### **Joris JEAN-BAPTISTE** - 2016-08-19 at 1:10 PM
 
-Si la maîtrise de l'ADC beaglebone est au point pourquoi pas. ![Hyacinthe, Danseur du ventre at echopen](./../../zz_assets/images/avatars/1248689.png) Hyacinthe devrait confirmer
+Si la maîtrise de l'ADC beaglebone est au point pourquoi pas. Hyacinthe Hyacinthe devrait confirmer
 
 ### **Hyacinthe** - 2016-08-19 at 1:15 PM
 
