--- a/bc3-data/40050474.md
+++ b/bc3-data/40050474.md
@@ -70,5 +70,5 @@ Question : Quelle est l'heure du meeting? Est-ce toute la journée?
 
 ### **Hyacinthe** - 2016-01-29 at 5:49 PM
 
-![Hyacinthe, Community & knowledge at echopen](./../../zz_assets/images/avatars/1269172.png) Hyacinthe  merci.
+Hyacinthe Hyacinthe  merci.
 
