--- a/bc3-data/40059917.md
+++ b/bc3-data/40059917.md
@@ -4,7 +4,7 @@ Bonjour à tous,   Alors j'ai discuté avec Colin et voilà ce que j'ai comprit:
 
 ### **Hyacinthe** - 2016-01-11 at 9:22 AM
 
-![Hyacinthe, FPGA at echopen](./../../zz_assets/images/avatars/1249124.png) Hyacinthe  tu nous fais un petit update ?
+Hyacinthe Hyacinthe  tu nous fais un petit update ?
 
 ### **Hyacinthe** - 2016-01-11 at 10:08 AM
 
