--- a/bc3-data/42151643.md
+++ b/bc3-data/42151643.md
@@ -16,9 +16,9 @@ Sinon, voilà le schéma...
 
 [
 
-![](bc3-raw/files/751401-capture-d-ecran-2016-01-12-a-10-32-27.png)
+![](../bc3-images/751401-capture-d-ecran-2016-01-12-a-10-32-27.png)
 
-](bc3-raw/files/751401-capture-d-ecran-2016-01-12-a-10-32-27.png)
+](../bc3-images/751401-capture-d-ecran-2016-01-12-a-10-32-27.png)
 
-[Capture d’écran 2016-01-12 à 10.32.27.png 506 KB • Download](bc3-raw/files/751401-capture-d-ecran-2016-01-12-a-10-32-27.png)
+[Capture d’écran 2016-01-12 à 10.32.27.png 506 KB • Download](../bc3-images/751401-capture-d-ecran-2016-01-12-a-10-32-27.png)
 
