--- a/bc3-data/43514161.md
+++ b/bc3-data/43514161.md
@@ -4,11 +4,11 @@ Hey hey tout le monde.   On vient de tester le circuit analogique (pulse à envi
 
 [
 
-![](bc3-raw/files/789676-tek0002.JPG)
+![](../bc3-images/789676-tek0002.JPG)
 
-](bc3-raw/files/789676-tek0002.JPG)
+](../bc3-images/789676-tek0002.JPG)
 
-[TEK0002.JPG 165 KB • Download](bc3-raw/files/789676-tek0002.JPG)
+[TEK0002.JPG 165 KB • Download](../bc3-images/789676-tek0002.JPG)
 
   Ca demande encore du travail, mais c'est déjà une bonne avancée :)
 
