--- a/bc3-data/43627477.md
+++ b/bc3-data/43627477.md
@@ -20,5 +20,5 @@ On a toute la partie contrôle du système. Il reste à réaliser l'asservisseme
 
 ### **Hyacinthe** - 2016-01-14 at 4:30 PM
 
-![Hyacinthe, Community & knowledge at echopen](./../../zz_assets/images/avatars/1269172.png) Hyacinthe  c dans ta boîte ;)
+Hyacinthe Hyacinthe  c dans ta boîte ;)
 
