--- a/bc3-data/45209407.md
+++ b/bc3-data/45209407.md
@@ -20,7 +20,7 @@ Parfait. Et +1 sur la remarque de Hyacinthe. Pourrait on imaginer ajouter la dim
 
 ### **Hyacinthe** - 2016-06-19 at 8:07 PM
 
-![Hyacinthe, Community & knowledge at echopen](./../../zz_assets/images/avatars/1269172.png) Hyacinthe : tjrs d'actu la restructuration? Fais signe si besoin d'un coup de main =)
+Hyacinthe Hyacinthe : tjrs d'actu la restructuration? Fais signe si besoin d'un coup de main =)
 
 ### **Hyacinthe** - 2016-06-20 at 12:10 PM
 
