--- a/bc3-data/45470462.md
+++ b/bc3-data/45470462.md
@@ -1,4 +1,4 @@
 # journée de l'imagerie du vivant  - 2016-01-17
 
-hello,   ![Hyacinthe, Libre faiseur at echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe   nous fait savoir que cet [event](http://www.cite-sciences.fr/fr/au-programme/lieux- ressources/cite-de-la-sante/au-programme/cycle-innovation-sante/) peut être intéressant   btw, on peut se proposer une sortie/débarquement tous ensemble le 10/11/12 février pour la [journée](http://www.cite-sciences.fr/fr/au-programme/lieux- ressources/cite-de-la-sante/au-programme/cycle-innovation-sante/%20) de l'imagerie du vivant   @++
+hello,   Hyacinthe Hyacinthe   nous fait savoir que cet [event](http://www.cite-sciences.fr/fr/au-programme/lieux- ressources/cite-de-la-sante/au-programme/cycle-innovation-sante/) peut être intéressant   btw, on peut se proposer une sortie/débarquement tous ensemble le 10/11/12 février pour la [journée](http://www.cite-sciences.fr/fr/au-programme/lieux- ressources/cite-de-la-sante/au-programme/cycle-innovation-sante/%20) de l'imagerie du vivant   @++
 
