--- a/bc3-data/47104524.md
+++ b/bc3-data/47104524.md
@@ -8,7 +8,7 @@ yop, il y a des trucs sympas pour faire du breadboard avec des SMT, des "PCB bre
 
  
 
-  Ping  ![Hyacinthe, Electronique at echopen](./../../zz_assets/images/avatars/1249123.png) Hyacinthe
+  Ping  Hyacinthe Hyacinthe
 
 ### **Hyacinthe** - 2016-01-20 at 10:00 AM
 
