--- a/bc3-data/47616418.md
+++ b/bc3-data/47616418.md
@@ -8,7 +8,7 @@ Top, @all si on pouvait profiter de ce temps pour caler l'ensemble des autres é
 
 ### **Hyacinthe** - 2016-02-21 at 3:15 PM
 
-Re!  ![Hyacinthe, Danseur du ventre at echopen](./../../zz_assets/images/avatars/1248689.png) Hyacinthe  ,  ![Hyacinthe, FPGA at echopen](./../../zz_assets/images/avatars/1249124.png) Hyacinthe  ,  ![Hyacinthe, Electronique at echopen](./../../zz_assets/images/avatars/1249123.png) Hyacinthe   - pour ce qui est de la discussion de vendredi sur la partie HV, deux solutions à proposer:  \- Jatin Sharma et sa version sonar marin : <https://www.duo.uio.no/handle/10852/47813> . Il passe de 12V à 180V, circuit basé sur un [MAX1771](https://www.maximintegrated.com/en/products/power /switching-regulators/MAX1771.html), et les gerbers et schematics sont dans sa thèse de master. Ca vaut peut etre le coup de faire un board proprette comme ca pour echopen, un HV supply séparé (pour appuyer la modularisation du design ;) ).  \- Murgen: utilisation d'un [R05-100B](http://www.mouser.fr/ProductDetail /RECOM-Power/R05-100B/?qs=3sBZtWOgbifm1JY3UuaavA%3D%3D) - plus simple (5V -&gt; 120V).  Le cablage revient à 3 condos à voir donc.  Ce n'est plus un circuit home-made, mais ca peut peut etre débloquer cette histoire de bruit? A voir en tout cas =)
+Re!  Hyacinthe Hyacinthe   - pour ce qui est de la discussion de vendredi sur la partie HV, deux solutions à proposer:  \- Jatin Sharma et sa version sonar marin : <https://www.duo.uio.no/handle/10852/47813> . Il passe de 12V à 180V, circuit basé sur un [MAX1771](https://www.maximintegrated.com/en/products/power /switching-regulators/MAX1771.html), et les gerbers et schematics sont dans sa thèse de master. Ca vaut peut etre le coup de faire un board proprette comme ca pour echopen, un HV supply séparé (pour appuyer la modularisation du design ;) ).  \- Murgen: utilisation d'un [R05-100B](http://www.mouser.fr/ProductDetail /RECOM-Power/R05-100B/?qs=3sBZtWOgbifm1JY3UuaavA%3D%3D) - plus simple (5V -&gt; 120V).  Le cablage revient à 3 condos à voir donc.  Ce n'est plus un circuit home-made, mais ca peut peut etre débloquer cette histoire de bruit? A voir en tout cas =)
 
 ### **Hyacinthe** - 2016-02-22 at 8:58 AM
 
@@ -26,5 +26,5 @@ Moi je pensais les modules à plat mais en épis ... why not ? C'est plus compac
 
 ### **Hyacinthe** - 2016-02-22 at 9:45 PM
 
-Ensuite, j'aime bien aussi le mode pins (breadboard compatible) - ca permet de modulariser encore plus facilement !!  Par exemple, une carte type murgen pourrait s'interfacer assez facilement avec une xula2, hein  ![Hyacinthe, Electronique at echopen](./../../zz_assets/images/avatars/1249123.png) Hyacinthe   =)
+Ensuite, j'aime bien aussi le mode pins (breadboard compatible) - ca permet de modulariser encore plus facilement !!  Par exemple, une carte type murgen pourrait s'interfacer assez facilement avec une xula2, hein  Hyacinthe Hyacinthe   =)
 
