--- a/bc3-data/49976669.md
+++ b/bc3-data/49976669.md
@@ -20,7 +20,7 @@ yes cloud9 est bien aussi - de git mais   en fait d'abord une interface de displ
 
 ### **Hyacinthe** - 2016-02-16 at 8:40 PM
 
-btw,  ![Hyacinthe, echopen](./../../zz_assets/images/avatars/791737.png) Hyacinthe propose que l'on ajoute une notion de coopétition - ayant en tête le RAMP #epidemium dont l'expérience a été concluante.   Du coup, on peut ajouter à chaque run de production, un executable qui update un leaderboard sur la web-interface de la redpitaya   oilà;)
+btw,  Hyacinthe Hyacinthe propose que l'on ajoute une notion de coopétition - ayant en tête le RAMP #epidemium dont l'expérience a été concluante.   Du coup, on peut ajouter à chaque run de production, un executable qui update un leaderboard sur la web-interface de la redpitaya   oilà;)
 
 ### **Hyacinthe** - 2016-02-17 at 8:43 AM
 
