--- a/bc3-data/50297430.md
+++ b/bc3-data/50297430.md
@@ -12,7 +12,7 @@ Done...
 
 ### **Hyacinthe** - 2016-02-10 at 8:40 AM
 
-welcome  ![Michel Bala, Electronique analogique at echopen](./../../zz_assets/images/avatars/2008321.png) Michel  qui nous rejoint dans le cadre de son projet pour l'agrégation et qui va travailler avec nous sur la partie éléctronique analogique.   ![Hyacinthe, Electronique at echopen](./../../zz_assets/images/avatars/1249123.png) Hyacinthe  et  ![Hyacinthe, Danseur du ventre at echopen](./../../zz_assets/images/avatars/1248689.png) Hyacinthe  je vous laisse lui donner les éléments importants.
+welcome  Hyacinthe Hyacinthe  je vous laisse lui donner les éléments importants.
 
 ### **Michel Bala** - 2016-02-10 at 8:54 AM
 
@@ -32,7 +32,7 @@ Pour ce qui est pédagogique, n'hésite pas à me pinguer, je suis déjà un peu
 
 ### **Hyacinthe** - 2016-04-29 at 12:07 PM
 
-Hello,   Virginie est venue cette semaine et nous l'avons rencontré avec ![Hyacinthe, echopen](./../../zz_assets/images/avatars/2157822.png) Hyacinthe . Voici ce qu'elle propose de regarder se son côté:   \- fantômes : matériaux, procédés, besoins des cliniciens pour l'apprentissage
+Hello,   Virginie est venue cette semaine et nous l'avons rencontré avec Hyacinthe Hyacinthe . Voici ce qu'elle propose de regarder se son côté:   \- fantômes : matériaux, procédés, besoins des cliniciens pour l'apprentissage
 
 \- dialogue entre médecins et ingénieurs, pour cerner les vrais besoin, le ressenti, voir le quand le comment et le pourquoi de l'utilisation   Elle souhaite rejoindre le projet à partir de la fin juin et l'an prochain et devrait nous rejoindre dans les réunions du lundi.   Pour mémoire, elle est en thèse en medical imaging &amp; oncology à l'IGR.
 
@@ -42,7 +42,7 @@ J'en profite pour rajouter un autre contributeur "SWAT medic, CBRNE officer, bee
 
 ### **Hyacinthe** - 2016-06-02 at 7:24 AM
 
-Bonjour à tous,   Nous accueillons ![Joris JEAN-BAPTISTE, Elec analog & digit + Soft at echopen](./../../zz_assets/images/avatars/4392629.png) Joris qui nous rejoint pour deux mois au sein du projet qui va travailler sur :
+Bonjour à tous,   Nous accueillons Hyacinthe Joris qui nous rejoint pour deux mois au sein du projet qui va travailler sur :
 
  * ADC  * Micro-contrôleur  * &amp; such
 
@@ -62,7 +62,7 @@ Salut Joris,   Bienvenue =)   Hyacinthe
 
 ### **Hyacinthe** - 2016-06-13 at 8:31 AM
 
-Nous accueillons ![saa sa, Javascript server web at echopen](./../../zz_assets/images/avatars/4574039.png) saa et ![Feng WANG, Mecatronique at echopen](./../../zz_assets/images/avatars/4574256.png) Feng pour respectivement 3 semaines pour travailler sur le server web signal  la suite de Matthieu et 2 mois pour avancer sur les modules et une partie Mecatronique ;) welcome !!
+Nous accueillons Hyacinthe Feng pour respectivement 3 semaines pour travailler sur le server web signal  la suite de Matthieu et 2 mois pour avancer sur les modules et une partie Mecatronique ;) welcome !!
 
 ### **Hyacinthe** - 2016-06-14 at 3:07 PM
 
