--- a/bc3-data/50802018.md
+++ b/bc3-data/50802018.md
@@ -4,7 +4,7 @@ Bonjour à tous,   Grâce à toutes vos contributions, nous sommes sur le point 
 
 ### **Hyacinthe** - 2016-01-27 at 7:52 AM
 
-![Hyacinthe, Danseur du ventre at echopen](./../../zz_assets/images/avatars/1248689.png) Hyacinthe   ![Hyacinthe, Libre faiseur at echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe   ![Hyacinthe, Electronique at echopen](./../../zz_assets/images/avatars/1249123.png) Hyacinthe   ![Hyacinthe, hardware thinker at echopen](./../../zz_assets/images/avatars/782574.png) Hyacinthe ![Hyacinthe, FPGA at echopen](./../../zz_assets/images/avatars/1249124.png) Hyacinthe   ![Hyacinthe, echopen](./../../zz_assets/images/avatars/782178.png) lacenne ![Hyacinthe, Contributeur méthodologie at echopen](./../../zz_assets/images/avatars/1269173.png) Hyacinthe   ![Hyacinthe, Community & knowledge at echopen](./../../zz_assets/images/avatars/1269172.png) Hyacinthe  Petite relance pour animer ce fil de discussion avec vos idées, vos points de vue afin de pouvoir caler notre réunion dans les meilleurs délais.   Bonne journée,
+Hyacinthe Hyacinthe  Petite relance pour animer ce fil de discussion avec vos idées, vos points de vue afin de pouvoir caler notre réunion dans les meilleurs délais.   Bonne journée,
 
 ### **Hyacinthe** - 2016-01-27 at 8:31 AM
 
@@ -24,7 +24,7 @@ Disclaimer, braindump :   # Contexte  Après la présentation, 6 mois pour fair
 
 ### **Hyacinthe** - 2016-01-29 at 1:14 PM
 
-Merci  ![Hyacinthe, hardware thinker at echopen](./../../zz_assets/images/avatars/782574.png) Hyacinthe  c'est top. J'invite tous les autres à ajouter vos points ;)
+Merci  Hyacinthe Hyacinthe  c'est top. J'invite tous les autres à ajouter vos points ;)
 
 ### **Hyacinthe** - 2016-01-29 at 3:06 PM
 
@@ -36,7 +36,7 @@ Caler des tâches sur les activités restantes de la page "conception" du wiki?
 
 ### **Hyacinthe** - 2016-01-29 at 4:41 PM
 
-Merci  ![Hyacinthe, Community & knowledge at echopen](./../../zz_assets/images/avatars/1269172.png) Hyacinthe  et  ![Hyacinthe, hardware thinker at echopen](./../../zz_assets/images/avatars/782574.png) Hyacinthe on avance... C'est top. Oui, reprendre bien entendu les éléments de la page conception, mais surtout évaluer les modules à faire évoluer dans les mois qui viennent pour aller au devant d'essais cliniques.   N'hésitez pas aussi dans vos ajouts à préciser les compétences nécessaires à chacun des points évoqués.
+Merci  Hyacinthe Hyacinthe on avance... C'est top. Oui, reprendre bien entendu les éléments de la page conception, mais surtout évaluer les modules à faire évoluer dans les mois qui viennent pour aller au devant d'essais cliniques.   N'hésitez pas aussi dans vos ajouts à préciser les compétences nécessaires à chacun des points évoqués.
 
 ### **Hyacinthe** - 2016-01-29 at 9:32 PM
 
@@ -48,7 +48,7 @@ En électronique je rajoute l'étude du circuit pour la miniaturisation et la ba
 
 ### **Hyacinthe** - 2016-02-01 at 7:58 AM
 
-Hello @all, merci pour vos retours.   Est-ce que samedi prochain, le 6 février, vous pensez être disponible pour clarifier tout cela ?  ![Hyacinthe, hardware thinker at echopen](./../../zz_assets/images/avatars/782574.png) Hyacinthe  ne sera pas là, mais a partagé l'ensmeble de ses points et si sa connexion le permet pourrait nous rejoindre par skype ?   Dites moi et continuer à ajouter vos points.   Bonne journée,
+Hello @all, merci pour vos retours.   Est-ce que samedi prochain, le 6 février, vous pensez être disponible pour clarifier tout cela ?  Hyacinthe Hyacinthe  ne sera pas là, mais a partagé l'ensmeble de ses points et si sa connexion le permet pourrait nous rejoindre par skype ?   Dites moi et continuer à ajouter vos points.   Bonne journée,
 
 ### **Hyacinthe** - 2016-02-02 at 6:48 AM
 
@@ -56,11 +56,11 @@ Je rajouterai, au niveau des questions à se poser samedi (prospectifs, peut êt
 
 ### **Hyacinthe** - 2016-02-02 at 9:57 AM
 
-merci  ![Hyacinthe, hardware thinker at echopen](./../../zz_assets/images/avatars/782574.png) Hyacinthe   Pour tous les autres, on se retrouve samedi vers 10.30 / 11.00 pour le brainstorm The Future Of Echopen... On déjeunera ensemble.
+merci  Hyacinthe Hyacinthe   Pour tous les autres, on se retrouve samedi vers 10.30 / 11.00 pour le brainstorm The Future Of Echopen... On déjeunera ensemble.
 
 ### **Hyacinthe** - 2016-02-03 at 9:40 AM
 
-![Hyacinthe, hardware thinker at echopen](./../../zz_assets/images/avatars/782574.png) Hyacinthe  Tu pourras nous skyper samedi?
+Hyacinthe Hyacinthe  Tu pourras nous skyper samedi?
 
 ### **Hyacinthe** - 2016-02-03 at 4:50 PM
 
@@ -68,15 +68,15 @@ merci  ![Hyacinthe, hardware thinker at echopen](./../../zz_assets/images/avata
 
 ### **Hyacinthe** - 2016-02-04 at 7:18 AM
 
-![Hyacinthe, Community & knowledge at echopen](./../../zz_assets/images/avatars/1269172.png) Hyacinthe : quelle heure ?  @Hyacinthe: damn jloupe tout !
+Hyacinthe Hyacinthe : quelle heure ?  @Hyacinthe: damn jloupe tout !
 
 ### **Hyacinthe** - 2016-02-04 at 7:29 AM
 
-![Hyacinthe, hardware thinker at echopen](./../../zz_assets/images/avatars/782574.png) Hyacinthe  je précise qu'il y aura plusieurs séances... Une samedi donc, et une autre en programmation pour s'assurer que tout le monde sera bien présent. On se calera sur tes dipso, sans doute un vendredi lui ai-je dit.
+Hyacinthe Hyacinthe  je précise qu'il y aura plusieurs séances... Une samedi donc, et une autre en programmation pour s'assurer que tout le monde sera bien présent. On se calera sur tes dipso, sans doute un vendredi lui ai-je dit.
 
 ### **Hyacinthe** - 2016-02-04 at 6:07 PM
 
-Je ne sais pas pour l'heure,  ![Hyacinthe, echopen](./../../zz_assets/images/avatars/791737.png) Hyacinthe ?
+Je ne sais pas pour l'heure,  Hyacinthe Hyacinthe ?
 
 ### **Hyacinthe** - 2016-02-05 at 1:41 PM
 
@@ -96,5 +96,5 @@ Qques insights, ça doit être le bon thread pour ça :)   Quick réunion avec N
 
 ### **Hyacinthe** - 2016-07-02 at 4:45 PM
 
-![Hyacinthe, Libre faiseur at echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe : PIC à 75$ (il y a une promo de 25%) pour une dev board PIC32MZ (dont un ADC 12 bits 28Msps)  -&gt; <http://www.microchipdirect.com/ProductSearch.aspx?Keywords=DM320007-C>  La chip en tant que telle est a 10€
+Hyacinthe Hyacinthe : PIC à 75$ (il y a une promo de 25%) pour une dev board PIC32MZ (dont un ADC 12 bits 28Msps)  -&gt; <http://www.microchipdirect.com/ProductSearch.aspx?Keywords=DM320007-C>  La chip en tant que telle est a 10€
 
