--- a/bc3-data/51412752.md
+++ b/bc3-data/51412752.md
@@ -1,14 +1,14 @@
 # Câblage capteur optique  - 2016-01-26
 
-![Hyacinthe, Danseur du ventre at echopen](./../../zz_assets/images/avatars/1248689.png) Hyacinthe  dit : "_dis moi, ton capteur et la diode sont alimentés en 3.3V ou en 5V?_"   Tout est alimenté en 5V (par l'USB). On vise un courant de 20 mA dans la diode.  Par contre la résistance de 40 Ko n'est pas présente sur le breadboard car on utilise celle présente en interne de l'Espruino car on configure l'entrée utilisée A8 en mode "input_pulldown" donc avec résistance de 40 Ko de mise à la masse.  Donc, au final on présente du 5V sur l'entrée du µC, il a l'air de supporter mais c'est vrai que je devrais essayer de mettre du 3.3V sur la pin 4. 
+Hyacinthe Hyacinthe  dit : "_dis moi, ton capteur et la diode sont alimentés en 3.3V ou en 5V?_"   Tout est alimenté en 5V (par l'USB). On vise un courant de 20 mA dans la diode.  Par contre la résistance de 40 Ko n'est pas présente sur le breadboard car on utilise celle présente en interne de l'Espruino car on configure l'entrée utilisée A8 en mode "input_pulldown" donc avec résistance de 40 Ko de mise à la masse.  Donc, au final on présente du 5V sur l'entrée du µC, il a l'air de supporter mais c'est vrai que je devrais essayer de mettre du 3.3V sur la pin 4. 
 
 [
 
-![](bc3-raw/files/1092201-20160126_222450.jpg)
+![](../bc3-images/1092201-20160126_222450.jpg)
 
-](bc3-raw/files/1092201-20160126_222450.jpg)
+](../bc3-images/1092201-20160126_222450.jpg)
 
-[20160126_222450.jpg 2.19 MB • Download](bc3-raw/files/1092201-20160126_222450.jpg)
+[20160126_222450.jpg 2.19 MB • Download](../bc3-images/1092201-20160126_222450.jpg)
 
 ### **Hyacinthe** - 2016-01-26 at 10:32 PM
 
