--- a/bc3-data/55007564.md
+++ b/bc3-data/55007564.md
@@ -4,9 +4,9 @@ Voilà ;)
 
 [
 
-![](bc3-raw/files/1232043-img_1824.JPG)
+![](../bc3-images/1232043-img_1824.JPG)
 
-](bc3-raw/files/1232043-img_1824.JPG)
+](../bc3-images/1232043-img_1824.JPG)
 
-[IMG_1824.JPG 480 KB • Download](bc3-raw/files/1232043-img_1824.JPG)
+[IMG_1824.JPG 480 KB • Download](../bc3-images/1232043-img_1824.JPG)
 
