--- a/bc3-data/55426441.md
+++ b/bc3-data/55426441.md
@@ -88,7 +88,7 @@ Gaffe à la license donc, ils font un truc commercial, et tant que y'a pas de li
 
 ### **Hyacinthe** - 2016-02-03 at 9:37 AM
 
-Yes je me demande ce qu'ils font comme sonde exactement...   ![Hyacinthe, hardware thinker at echopen](./../../zz_assets/images/avatars/782574.png) Hyacinthe  je ne comprend pas ta phrase pas de licence sur le repo?
+Yes je me demande ce qu'ils font comme sonde exactement...   Hyacinthe Hyacinthe  je ne comprend pas ta phrase pas de licence sur le repo?
 
 ### **Hyacinthe** - 2016-02-04 at 5:33 AM
 
@@ -96,7 +96,7 @@ Le repository ne contenait pas de licence, le contenu n'était donc pas couvert,
 
 ### **Hyacinthe** - 2016-02-04 at 10:53 AM
 
-hello,   je ne comprends pas bien car le code de l'app est sous licence depuis qu'on a eu les éléments de jonathan.  ![Hyacinthe, FPGA at echopen](./../../zz_assets/images/avatars/1249124.png) Hyacinthe   et  ![Hyacinthe, Danseur du ventre at echopen](./../../zz_assets/images/avatars/1248689.png) Hyacinthe  confirment que leur kit-soft est bien sous licence   btw, selon jonathan, il s'agissait de mettre sous contrôle de licence la racine des repo   @Hyacinthe: qu'as tu précisément en tête ?   @+
+hello,   je ne comprends pas bien car le code de l'app est sous licence depuis qu'on a eu les éléments de jonathan.  Hyacinthe Hyacinthe  confirment que leur kit-soft est bien sous licence   btw, selon jonathan, il s'agissait de mettre sous contrôle de licence la racine des repo   @Hyacinthe: qu'as tu précisément en tête ?   @+
 
 ### **Hyacinthe** - 2016-02-04 at 10:59 AM
 
