--- a/bc3-data/58006169.md
+++ b/bc3-data/58006169.md
@@ -1,6 +1,6 @@
 # crowdsourcing rép. journaleux  - 2016-02-05
 
-Quentin Noirfalisse, journaliste de [medor ](https://medor.coop/fr/)(les yeux ouverts), qui nous a connu par Nicolas Pettiaux (université lilbre de bruxelles, qui était présent au captech ), nous a adressé une série de questions, en vue d'un billet sur leur site   voici un doc pour recceuillir vos contributions.  ![Hyacinthe, echopen](./../../zz_assets/images/avatars/791737.png) Hyacinthe  a formulé les premières réponses.   <https://drive.google.com/drive/folders/0B0V8htWBLPWBZW5sN25WNUwzX0k>   il faudrait converger pour lundi   @++
+Quentin Noirfalisse, journaliste de [medor ](https://medor.coop/fr/)(les yeux ouverts), qui nous a connu par Nicolas Pettiaux (université lilbre de bruxelles, qui était présent au captech ), nous a adressé une série de questions, en vue d'un billet sur leur site   voici un doc pour recceuillir vos contributions.  Hyacinthe Hyacinthe  a formulé les premières réponses.   <https://drive.google.com/drive/folders/0B0V8htWBLPWBZW5sN25WNUwzX0k>   il faudrait converger pour lundi   @++
 
 ### **Hyacinthe** - 2016-02-08 at 9:22 AM
 
@@ -8,7 +8,7 @@ Je n'y ai pas accès :-(
 
 ### **Hyacinthe** - 2016-02-08 at 9:31 AM
 
-![Hyacinthe, Libre faiseur at echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe   je viens de te renvoyer le lien  ![Hyacinthe, echopen](./../../zz_assets/images/avatars/791737.png) Hyacinthe  tu confirmes qu'on a tous accès au drive d'échopen qd on ouvre un document ?
+Hyacinthe Hyacinthe  tu confirmes qu'on a tous accès au drive d'échopen qd on ouvre un document ?
 
 ### **Hyacinthe** - 2016-02-08 at 9:40 AM
 
