--- a/bc3-data/58040654.md
+++ b/bc3-data/58040654.md
@@ -38,7 +38,7 @@ Ce qu'on veut faire :  <http://sci-hub.io/10.1109/ULTSYM.2015.0517>   =)
 
 ### **Hyacinthe** - 2016-02-16 at 6:59 PM
 
-![Hyacinthe, echopen](./../../zz_assets/images/avatars/782178.png) lacenne  : je ne sais pas si tu as vu, mais y'a des trucs funky. W. K. Kong, W. Lee, K. C. Kim, Y. Yoo, and T. –K. Song, “Implementation and optimization of ultrasound signal processing algorithms on mobile GPU,” Proc. SPIE Medical Imaging, pp. 90401F-90401F, 2014.
+Hyacinthe lacenne  : je ne sais pas si tu as vu, mais y'a des trucs funky. W. K. Kong, W. Lee, K. C. Kim, Y. Yoo, and T. –K. Song, “Implementation and optimization of ultrasound signal processing algorithms on mobile GPU,” Proc. SPIE Medical Imaging, pp. 90401F-90401F, 2014.
 
 ### **Hyacinthe** - 2016-02-16 at 8:41 PM
 
@@ -50,7 +50,7 @@ greg parle d'echOpen - avec une majuscule grande comme un O -  dans 10xmanageme
 
 ### **Hyacinthe** - 2016-02-22 at 3:23 PM
 
-![Hyacinthe, FPGA at echopen](./../../zz_assets/images/avatars/1249124.png) Hyacinthe ![Hyacinthe, echopen](./../../zz_assets/images/avatars/2157822.png) Hyacinthe ![Hyacinthe, Electronique at echopen](./../../zz_assets/images/avatars/1249123.png) Hyacinthe ![Hyacinthe, Libre faiseur at echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe   du FPGA avec un IDE d'arduino et en open source - ca s'appelle [papilio](http://papilio.cc/)
+Hyacinthe Hyacinthe   du FPGA avec un IDE d'arduino et en open source - ca s'appelle [papilio](http://papilio.cc/)
 
 ### **Hyacinthe** - 2016-02-22 at 3:30 PM
 
@@ -62,7 +62,7 @@ Date de lancement du Lumify en France : septembre 2016.  Les démarches d'enregi
 
 ### **Hyacinthe** - 2016-03-01 at 12:24 AM
 
-merci  ![Hyacinthe, Contributeur méthodologie at echopen](./../../zz_assets/images/avatars/1269173.png) Hyacinthe  on a encore 1 peu  de marge ;)
+merci  Hyacinthe Hyacinthe  on a encore 1 peu  de marge ;)
 
 ### **Hyacinthe** - 2016-03-01 at 10:58 AM
 
@@ -88,7 +88,7 @@ Je pose ça là !   [http://www.fiercemedicaldevices.com/story/ge-healthcare-han
 
 ### **Hyacinthe** - 2016-03-21 at 4:20 PM
 
-special  ![Hyacinthe, Libre faiseur at echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe   après le dej avec Hyacinthe &amp; Hyacinthe, où nous sommes convenus de chercher des datasets afin de pouvoir étancher la soif de data des learning machines   voici un premier set de data ouvert d'images echo : <http://cimlaboratory.com/applications/thyroid/>.
+special  Hyacinthe Hyacinthe   après le dej avec Hyacinthe &amp; Hyacinthe, où nous sommes convenus de chercher des datasets afin de pouvoir étancher la soif de data des learning machines   voici un premier set de data ouvert d'images echo : <http://cimlaboratory.com/applications/thyroid/>.
 
  
 
@@ -118,11 +118,11 @@ Elle est grosse la clarius..
 
 [
 
-![](bc3-raw/files/2899590-img_20160324_104447.jpg)
+![](../bc3-images/2899590-img_20160324_104447.jpg)
 
-](bc3-raw/files/2899590-img_20160324_104447.jpg)
+](../bc3-images/2899590-img_20160324_104447.jpg)
 
-[IMG_20160324_104447.jpg 52.8 KB • Download](bc3-raw/files/2899590-img_20160324_104447.jpg)
+[IMG_20160324_104447.jpg 52.8 KB • Download](../bc3-images/2899590-img_20160324_104447.jpg)
 
 ### **Hyacinthe** - 2016-03-24 at 11:30 AM
 
