--- a/bc3-data/58798075.md
+++ b/bc3-data/58798075.md
@@ -28,11 +28,11 @@ On les ajoute à ce basecamp ? Je sais en tout cas qu'on gagnerait à y mettre N
 
 ### **Hyacinthe** - 2016-02-08 at 8:15 AM
 
-Si vous voulez.  ![Hyacinthe, echopen](./../../zz_assets/images/avatars/782178.png) lacenne  qu'en penses tu ? sont-ils de futures contributeurs réguliers ?   De quel Nicolas parles tu ? Si c'est Nicolas Nallet, je peux lui demander s'il le souhaite.
+Si vous voulez.  Hyacinthe lacenne  qu'en penses tu ? sont-ils de futures contributeurs réguliers ?   De quel Nicolas parles tu ? Si c'est Nicolas Nallet, je peux lui demander s'il le souhaite.
 
 ### **Hyacinthe** - 2016-02-08 at 8:39 AM
 
-![Hyacinthe, echopen](./../../zz_assets/images/avatars/791737.png) Hyacinthe  je pense que  ![Hyacinthe, hardware thinker at echopen](./../../zz_assets/images/avatars/782574.png) Hyacinthe  parle des traducteurs du wiki : catehrine philips et nicolas etaix
+Hyacinthe Hyacinthe  parle des traducteurs du wiki : catehrine philips et nicolas etaix
 
 ### **Hyacinthe** - 2016-02-08 at 9:34 AM
 
@@ -60,7 +60,7 @@ Bonjour!
 
 ### **Hyacinthe** - 2016-02-08 at 3:41 PM
 
-Bonjour  ![Nicolas, Tech & such at echopen](./../../zz_assets/images/avatars/1946185.png) Nicolas  bienvenue sur le basecamp echopen. A ta dispo si tu as des questions.
+Bonjour  Hyacinthe Nicolas  bienvenue sur le basecamp echopen. A ta dispo si tu as des questions.
 
 ### **Hyacinthe** - 2016-02-08 at 5:48 PM
 
@@ -72,7 +72,7 @@ Salut, maintenant que vous avez déplacé les fichiers sur votre drive je peux e
 
 ### **Hyacinthe** - 2016-02-08 at 6:40 PM
 
-![Nicolas, Tech & such at echopen](./../../zz_assets/images/avatars/1946185.png) Nicolas  je t'ai ajouté au dossier. Tu devrais alors pouvoir ajouter ce que tu veux.
+Hyacinthe Nicolas  je t'ai ajouté au dossier. Tu devrais alors pouvoir ajouter ce que tu veux.
 
 ### **Nicolas** - 2016-02-08 at 6:44 PM
 
@@ -84,7 +84,7 @@ Re-bonjour tout le monde,  Petite question pour les personnes ayant rédigé la 
 
 ### **Hyacinthe** - 2016-02-08 at 10:57 PM
 
-hello  ![Nicolas, Tech & such at echopen](./../../zz_assets/images/avatars/1946185.png) Nicolas ,   le module de formation est en cours de conception en fait ;)   par ailleurs, je ping  ![Hyacinthe, echopen](./../../zz_assets/images/avatars/791737.png) Hyacinthe  pour la question que tu soulèves   @++
+hello  Hyacinthe Hyacinthe  pour la question que tu soulèves   @++
 
 ### **Nicolas** - 2016-02-09 at 8:15 AM
 
@@ -96,7 +96,7 @@ Sur un week-end c'est ça?
 
 ### **Hyacinthe** - 2016-02-09 at 8:21 AM
 
-Bonjour  ![Nicolas, Tech & such at echopen](./../../zz_assets/images/avatars/1946185.png) Nicolas  merci pour tes remaruqes.
+Bonjour  Hyacinthe Nicolas  merci pour tes remaruqes.
 
  * La formation a pour ambition d'être effectuée en 48h  (soir un week-end par exemple) =&gt; 2 days training est parfait.   * Pour l'utilisation de l'outils basecamp, l'idée est de réussir insérer les informations au bon endroit. S'il s'agit d'une remarques qui s'insère dans un fil de discussion, alors c'est parfait, sinon, il est intéressant de créer un nouveau fil, uniquement si la thématique mérite des échanges au sein de la communauté. Pour ce qui est des petites questions, nous avons un slack, sorte d'outils de chat dans lequel je viens de t'ajouter.
 
