--- a/bc3-data/59203840.md
+++ b/bc3-data/59203840.md
@@ -8,7 +8,7 @@ yes je vais lui faire une réponse du type, on a pas encore développé et lui p
 
 ### **Hyacinthe** - 2016-02-08 at 8:18 AM
 
-![Hyacinthe, hardware thinker at echopen](./../../zz_assets/images/avatars/782574.png) Hyacinthe  pourrais tu mettre ce type de sujets dans le il de discussion ondoarding ? Cela nous évitera que les discussions se multiplient et qu'on finisse par perdre toutes les informations ?
+Hyacinthe Hyacinthe  pourrais tu mettre ce type de sujets dans le il de discussion ondoarding ? Cela nous évitera que les discussions se multiplient et qu'on finisse par perdre toutes les informations ?
 
 ### **Hyacinthe** - 2016-02-08 at 9:43 AM
 
@@ -16,7 +16,7 @@ Le doppler peut se faire si on ne fait pas de détection d'enveloppe. Le traitem
 
 ### **Hyacinthe** - 2016-02-08 at 9:56 AM
 
-ok ;) nice   il s'agit de Marie-Thérèse Barrellier, elle passe nous voir le vendredi 18. ![Hyacinthe, Danseur du ventre at echopen](./../../zz_assets/images/avatars/1248689.png) Hyacinthe  on lui fera un update, et elle précise que sur la partie veineuse, le doppler est moins critique que sur l'artériel. Or, une des pathologies le plus fréquemment suspectée aux urg. est la phlébite, donc pathologie veineuse ;)
+ok ;) nice   il s'agit de Marie-Thérèse Barrellier, elle passe nous voir le vendredi 18. Hyacinthe Hyacinthe  on lui fera un update, et elle précise que sur la partie veineuse, le doppler est moins critique que sur l'artériel. Or, une des pathologies le plus fréquemment suspectée aux urg. est la phlébite, donc pathologie veineuse ;)
 
 ### **Hyacinthe** - 2016-02-08 at 10:27 AM
 
@@ -32,5 +32,5 @@ jeudi 18 ou vendredi 19?
 
 ### **Hyacinthe** - 2016-02-08 at 10:56 PM
 
-![Hyacinthe, Community & knowledge at echopen](./../../zz_assets/images/avatars/1269172.png) Hyacinthe  oups elle passera le vendredi 18 mars   @++
+Hyacinthe Hyacinthe  oups elle passera le vendredi 18 mars   @++
 
