--- a/bc3-data/61832272.md
+++ b/bc3-data/61832272.md
@@ -1,6 +1,6 @@
 # Organisation Release 24 Mars Archived  - 2016-02-11
 
-Le 24 mars prochain, nous présenterons le premier prototype echopen V1 fonctionnel. Je vous invite à ce que nous discutions de cet event sur ce fil de discussion.     hello, pour le 10 mars l'hôtel dieu nous mets à disposition l'amphi Lapersonne qui a une capacité d'accueil d'une centaine de personnes  ![Hyacinthe, echopen](./../../zz_assets/images/avatars/791737.png) Hyacinthe  je te le montre tout à l'heure s'il est ouvert   @++
+Le 24 mars prochain, nous présenterons le premier prototype echopen V1 fonctionnel. Je vous invite à ce que nous discutions de cet event sur ce fil de discussion.     hello, pour le 10 mars l'hôtel dieu nous mets à disposition l'amphi Lapersonne qui a une capacité d'accueil d'une centaine de personnes  Hyacinthe Hyacinthe  je te le montre tout à l'heure s'il est ouvert   @++
 
 ### **Hyacinthe** - 2016-02-11 at 12:22 PM
 
@@ -28,11 +28,11 @@ Bonjour à tous,   Afin d'inviter les gens à la soirée de présentation de la 
 
 [
 
-![](bc3-raw/files/2553919 -invitation-echopen-24-mars-2016.jpg)
+![](../bc3-images/2553919 -invitation-echopen-24-mars-2016.jpg)
 
-](bc3-raw/files/2553919 -invitation-echopen-24-mars-2016.jpg)
+](../bc3-images/2553919 -invitation-echopen-24-mars-2016.jpg)
 
-[Invitation Echopen 24 Mars 2016.jpg 448 KB • Download](bc3-raw/files/2553919 -invitation-echopen-24-mars-2016.jpg)
+[Invitation Echopen 24 Mars 2016.jpg 448 KB • Download](../bc3-images/2553919 -invitation-echopen-24-mars-2016.jpg)
 
 ### **Hyacinthe** - 2016-03-15 at 12:17 PM
 
@@ -62,9 +62,9 @@ Bonsoir à tous,   Voilà donc le draft de présentation avec l'ajout des élém
 
 ![](./../../zz_assets/images/previews/2875588-echopen_presentation_24_mars_2016.png)
 
-](bc3-raw/files/2875588-echopen_presentation_24_mars_2016.pdf)
+](../bc3-images/2875588-echopen_presentation_24_mars_2016.pdf)
 
-[echopen_presentation_24_mars_2016.pdf 11.2 MB • Download](bc3-raw/files/2875588-echopen_presentation_24_mars_2016.pdf)
+[echopen_presentation_24_mars_2016.pdf 11.2 MB • Download](../bc3-images/2875588-echopen_presentation_24_mars_2016.pdf)
 
 ### **Hyacinthe** - 2016-03-23 at 8:17 PM
 
@@ -78,7 +78,7 @@ Beau boulot !  Qq petits pb dans la partie méca :
 
 ### **Hyacinthe** - 2016-03-24 at 7:28 AM
 
-Merci  ![Hyacinthe, Libre faiseur at echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe , bien vue... Désolé pour ces boeugs. C'est corrigé.  En effet les photos sont un peu floues. Si tu m'envoies les originaux, je peux les intégrer dans la journée, j'ai des masques d'images sur les slides, ça devrait donc ne pas poser de soucis. J'ai exporté en pptx et intégré les éléments sur keynote.
+Merci  Hyacinthe Hyacinthe , bien vue... Désolé pour ces boeugs. C'est corrigé.  En effet les photos sont un peu floues. Si tu m'envoies les originaux, je peux les intégrer dans la journée, j'ai des masques d'images sur les slides, ça devrait donc ne pas poser de soucis. J'ai exporté en pptx et intégré les éléments sur keynote.
 
 ### **Hyacinthe** - 2016-06-02 at 9:54 AM
 
