--- a/bc3-data/63873682.md
+++ b/bc3-data/63873682.md
@@ -1,6 +1,6 @@
 # apéros  - 2016-02-15
 
-hello,   laurent bloch, spé de sécurité info, DSI de Paris Dauphine est ok pour faire un apéro le 26 février ;) voici son [blog](http://www.laurentbloch.org/MySpip3/) et ses [skills](https://www.linkedin.com/in/laurentbloch1)   ceci a vocation à accueillir les posts dédiés aux apéros  ![Hyacinthe, echopen](./../../zz_assets/images/avatars/791737.png) Hyacinthe  c bien comme ça qu'on fait ?
+hello,   laurent bloch, spé de sécurité info, DSI de Paris Dauphine est ok pour faire un apéro le 26 février ;) voici son [blog](http://www.laurentbloch.org/MySpip3/) et ses [skills](https://www.linkedin.com/in/laurentbloch1)   ceci a vocation à accueillir les posts dédiés aux apéros  Hyacinthe Hyacinthe  c bien comme ça qu'on fait ?
 
 ### **Hyacinthe** - 2016-02-15 at 1:51 PM
 
