--- a/bc3-data/63875590.md
+++ b/bc3-data/63875590.md
@@ -1,6 +1,6 @@
 # prod. echopen versionnée  - 2016-02-15
 
-hello à tous,   dans la suite des intuitions de  ![Hyacinthe, Libre faiseur at echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe   sur le versionning de toute la prod., vo[ICI](https://github.com/LibreHealthcare/LibreHealthcare)  l'example de librehealthcare   @++
+hello à tous,   dans la suite des intuitions de  Hyacinthe Hyacinthe   sur le versionning de toute la prod., vo[ICI](https://github.com/LibreHealthcare/LibreHealthcare)  l'example de librehealthcare   @++
 
 ### **Hyacinthe** - 2016-02-15 at 9:51 AM
 
