--- a/bc3-data/86627319.md
+++ b/bc3-data/86627319.md
@@ -4,43 +4,43 @@ Bonjour à tous,   Nous venons de recevoir les visuels de Barbara ;)   Les voici
 
 [
 
-![](bc3-raw/files/2647132-echopen-1.png)
+![](../bc3-images/2647132-echopen-1.png)
 
-](bc3-raw/files/2647132-echopen-1.png)
+](../bc3-images/2647132-echopen-1.png)
 
-[echopen-1.png 107 KB • Download](bc3-raw/files/2647132-echopen-1.png)
-
-[
-
-![](bc3-raw/files/2647134-echopen-2.png)
-
-](bc3-raw/files/2647134-echopen-2.png)
-
-[echopen-2.png 77.2 KB • Download](bc3-raw/files/2647134-echopen-2.png)
+[echopen-1.png 107 KB • Download](../bc3-images/2647132-echopen-1.png)
 
 [
 
-![](bc3-raw/files/2647136-echopen-3.png)
+![](../bc3-images/2647134-echopen-2.png)
 
-](bc3-raw/files/2647136-echopen-3.png)
+](../bc3-images/2647134-echopen-2.png)
 
-[echopen-3.png 74.2 KB • Download](bc3-raw/files/2647136-echopen-3.png)
-
-[
-
-![](bc3-raw/files/2647137-echopen-4.png)
-
-](bc3-raw/files/2647137-echopen-4.png)
-
-[echopen-4.png 49.3 KB • Download](bc3-raw/files/2647137-echopen-4.png)
+[echopen-2.png 77.2 KB • Download](../bc3-images/2647134-echopen-2.png)
 
 [
 
-![](bc3-raw/files/2647140-echopen-5.png)
+![](../bc3-images/2647136-echopen-3.png)
 
-](bc3-raw/files/2647140-echopen-5.png)
+](../bc3-images/2647136-echopen-3.png)
 
-[echopen-5.png 45.2 KB • Download](bc3-raw/files/2647140-echopen-5.png)
+[echopen-3.png 74.2 KB • Download](../bc3-images/2647136-echopen-3.png)
+
+[
+
+![](../bc3-images/2647137-echopen-4.png)
+
+](../bc3-images/2647137-echopen-4.png)
+
+[echopen-4.png 49.3 KB • Download](../bc3-images/2647137-echopen-4.png)
+
+[
+
+![](../bc3-images/2647140-echopen-5.png)
+
+](../bc3-images/2647140-echopen-5.png)
+
+[echopen-5.png 45.2 KB • Download](../bc3-images/2647140-echopen-5.png)
 
 ### **Hyacinthe** - 2016-03-17 at 1:23 PM
 
@@ -56,7 +56,7 @@ Cool! J'aurais cependant quelques remarques (surtout sur la première), s'il n'e
 
 ### **Hyacinthe** - 2016-03-20 at 10:13 AM
 
-Merci  ![Hyacinthe, Community & knowledge at echopen](./../../zz_assets/images/avatars/1269172.png) Hyacinthe  pour tes remarques. je les ai fait passer. J'ettends leur retour pour savoir s'il est encore temps.   Concernant ton point 3. Pour les pro de santé (hors médecins) il s'agit d'une demi-journée de formation, puisque c'est une formation au geste et non à la lecture, d'où la télémédecine qui permet ensuite d'envoyer les images aux médecins qui pourront alors donner leurs avis. C'est d'ailleurs le modèle principale de l'utilisation des échographes portables dans les pays émérgents.   En ce qui concerne la notion de kit, comme elle n'est as encore très claire, nous pourrons voir cela dans un second temps.   Enfin, en effet, c'est plutôt une aide au diag. Je leur envoi l'information.   Merci.   A demain,
+Merci  Hyacinthe Hyacinthe  pour tes remarques. je les ai fait passer. J'ettends leur retour pour savoir s'il est encore temps.   Concernant ton point 3. Pour les pro de santé (hors médecins) il s'agit d'une demi-journée de formation, puisque c'est une formation au geste et non à la lecture, d'où la télémédecine qui permet ensuite d'envoyer les images aux médecins qui pourront alors donner leurs avis. C'est d'ailleurs le modèle principale de l'utilisation des échographes portables dans les pays émérgents.   En ce qui concerne la notion de kit, comme elle n'est as encore très claire, nous pourrons voir cela dans un second temps.   Enfin, en effet, c'est plutôt une aide au diag. Je leur envoi l'information.   Merci.   A demain,
 
 ### **Hyacinthe** - 2016-03-21 at 8:31 AM
 
@@ -64,7 +64,7 @@ Yop,   Je plussoie Hyacinthe, la télémedecine n'est pas du tout dans le top us
 
 ### **Hyacinthe** - 2016-03-21 at 9:13 AM
 
-Merci  ![Hyacinthe, echopen](./../../zz_assets/images/avatars/2157822.png) Hyacinthe  pour ton retour.   Concernant le télé-médecine, deux raisons nous pousse à la mettre en avant. Sachant qu’elle se définie (selon les ARS) comme **une forme de pratique médicale à distance utilisant les technologies de l’information et de la communication.** Elle met en rapport, […] plusieurs professionnels de santé, parmi lesquels figure nécessairement un professionnel médical et, le cas échéant, d’autres professionnels apportant leurs soins au patient.
+Merci  Hyacinthe Hyacinthe  pour ton retour.   Concernant le télé-médecine, deux raisons nous pousse à la mettre en avant. Sachant qu’elle se définie (selon les ARS) comme **une forme de pratique médicale à distance utilisant les technologies de l’information et de la communication.** Elle met en rapport, […] plusieurs professionnels de santé, parmi lesquels figure nécessairement un professionnel médical et, le cas échéant, d’autres professionnels apportant leurs soins au patient.
 
 
 
@@ -72,5 +72,5 @@ Merci  ![Hyacinthe, echopen](./../../zz_assets/images/avatars/2157822.png) Hyac
 
  
 
-Enfin, concernant le kit, je leur ai fait la demande et j’attends leur retour, ils regardent ça aujorud'hui. J'espère qu'ils pourront ajuster rapidement pour que nous soyons prêts jeudi. Si besoin,  ![Hyacinthe, echopen](./../../zz_assets/images/avatars/2157822.png) Hyacinthe  je te mets en contact s'ils ont des quesitons sur le kit.   A dispo,   Bonne journée.
+Enfin, concernant le kit, je leur ai fait la demande et j’attends leur retour, ils regardent ça aujorud'hui. J'espère qu'ils pourront ajuster rapidement pour que nous soyons prêts jeudi. Si besoin,  Hyacinthe Hyacinthe  je te mets en contact s'ils ont des quesitons sur le kit.   A dispo,   Bonne journée.
 
