--- a/bc3-data/88260299.md
+++ b/bc3-data/88260299.md
@@ -4,11 +4,11 @@ voici qqs news de la semaine   \- bitmaker a quasiment fini son travail -&gt; on
 
 [
 
-![](bc3-raw/files/2734027-screenshot_2016-03-19-19-58-15.png)
+![](../bc3-images/2734027-screenshot_2016-03-19-19-58-15.png)
 
-](bc3-raw/files/2734027-screenshot_2016-03-19-19-58-15.png)
+](../bc3-images/2734027-screenshot_2016-03-19-19-58-15.png)
 
-[Screenshot_2016-03-19-19-58-15.png 340 KB • Download](bc3-raw/files/2734027-screenshot_2016-03-19-19-58-15.png)
+[Screenshot_2016-03-19-19-58-15.png 340 KB • Download](../bc3-images/2734027-screenshot_2016-03-19-19-58-15.png)
 
 ### **Hyacinthe** - 2016-03-19 at 7:25 PM
 
@@ -24,23 +24,23 @@ bon la même image qu'en haut mais deux jours plus tard
 
 [
 
-![](bc3-raw/files/2841835-screenshot_2016-03-23-00-13-00.png)
+![](../bc3-images/2841835-screenshot_2016-03-23-00-13-00.png)
 
-](bc3-raw/files/2841835-screenshot_2016-03-23-00-13-00.png)
+](../bc3-images/2841835-screenshot_2016-03-23-00-13-00.png)
 
-[Screenshot_2016-03-23-00-13-00.png 223 KB • Download](bc3-raw/files/2841835-screenshot_2016-03-23-00-13-00.png)
+[Screenshot_2016-03-23-00-13-00.png 223 KB • Download](../bc3-images/2841835-screenshot_2016-03-23-00-13-00.png)
 
    et là le derme, le ligament un peu de muscles et de l'os de l'extrémité radiale du Hyacinthe   
 
 [
 
-![](bc3-raw/files/2841847-screenshot_2016-03-23-00-18-18.png)
+![](../bc3-images/2841847-screenshot_2016-03-23-00-18-18.png)
 
-](bc3-raw/files/2841847-screenshot_2016-03-23-00-18-18.png)
+](../bc3-images/2841847-screenshot_2016-03-23-00-18-18.png)
 
-[Screenshot_2016-03-23-00-18-18.png 224 KB • Download](bc3-raw/files/2841847-screenshot_2016-03-23-00-18-18.png)
+[Screenshot_2016-03-23-00-18-18.png 224 KB • Download](../bc3-images/2841847-screenshot_2016-03-23-00-18-18.png)
 
-   nice job  ![Hyacinthe, Danseur du ventre at echopen](./../../zz_assets/images/avatars/1248689.png) Hyacinthe  ;)
+   nice job  Hyacinthe Hyacinthe  ;)
 
 ### **Hyacinthe** - 2016-03-23 at 8:34 AM
 
@@ -76,5 +76,5 @@ Si besoin je parle espagnol (à peu près)
 
 ### **Hyacinthe** - 2016-11-08 at 12:54 AM
 
-![Hyacinthe, Community & knowledge at echopen](./../../zz_assets/images/avatars/1269172.png) Hyacinthe  si ca te branche un starter-kit en espagnol, tu es la bienvenue ;) je blague
+Hyacinthe Hyacinthe  si ca te branche un starter-kit en espagnol, tu es la bienvenue ;) je blague
 
