--- a/bc3-data/88261948.md
+++ b/bc3-data/88261948.md
@@ -8,7 +8,7 @@ Chouette ! C'est quand? Ça peut être sympa d'y aller en équipe si l'événeme
 
 ### **Hyacinthe** - 2016-03-21 at 10:57 AM
 
-sure ! ;) ensuite je crois que le nb de billets est limité   en pcpe ce sont des keynotes en one-man dont le format 10' est réglé (comme ted) mais j'ai insisté sur la nature communautaire du projet et la nécessité que l'on soit plusieurs à le présenter - ils doivent me faire un retour - ce serait d'ailleurs pas mal qu'il y a ait une fille  ![Hyacinthe, Community & knowledge at echopen](./../../zz_assets/images/avatars/1269172.png) Hyacinthe ;)
+sure ! ;) ensuite je crois que le nb de billets est limité   en pcpe ce sont des keynotes en one-man dont le format 10' est réglé (comme ted) mais j'ai insisté sur la nature communautaire du projet et la nécessité que l'on soit plusieurs à le présenter - ils doivent me faire un retour - ce serait d'ailleurs pas mal qu'il y a ait une fille  Hyacinthe Hyacinthe ;)
 
 ### **Hyacinthe** - 2016-03-21 at 1:45 PM
 
