--- a/bc3-data/90548815.md
+++ b/bc3-data/90548815.md
@@ -4,11 +4,11 @@
 
 [
 
-![](bc3-raw/files/2844289-screenshot_2016-03-23-02-06-57.png)
+![](../bc3-images/2844289-screenshot_2016-03-23-02-06-57.png)
 
-](bc3-raw/files/2844289-screenshot_2016-03-23-02-06-57.png)
+](../bc3-images/2844289-screenshot_2016-03-23-02-06-57.png)
 
-[Screenshot_2016-03-23-02-06-57.png 193 KB • Download](bc3-raw/files/2844289-screenshot_2016-03-23-02-06-57.png)
+[Screenshot_2016-03-23-02-06-57.png 193 KB • Download](../bc3-images/2844289-screenshot_2016-03-23-02-06-57.png)
 
    ;)
 
@@ -22,11 +22,11 @@ Plus je la vois et plus c'est canon =)   Hyacinthe, tu peux jouer sur les niveau
 
 [
 
-![](bc3-raw/files/2849167-image1.png)
+![](../bc3-images/2849167-image1.png)
 
-](bc3-raw/files/2849167-image1.png)
+](../bc3-images/2849167-image1.png)
 
-[Image1.png 81.8 KB • Download](bc3-raw/files/2849167-image1.png)
+[Image1.png 81.8 KB • Download](../bc3-images/2849167-image1.png)
 
 ### **Hyacinthe** - 2016-03-23 at 8:14 AM
 
@@ -46,27 +46,27 @@ Hyacinthe debeir nous adresse un article sur echOpen dans un journal belge
 
 [
 
-![](bc3-raw/files/3384084-img_20160406_184742.jpg)
+![](../bc3-images/3384084-img_20160406_184742.jpg)
 
-](bc3-raw/files/3384084-img_20160406_184742.jpg)
+](../bc3-images/3384084-img_20160406_184742.jpg)
 
-[IMG_20160406_184742.jpg 1.69 MB • Download](bc3-raw/files/3384084-img_20160406_184742.jpg)
-
-[
-
-![](bc3-raw/files/3384127-img_20160406_184832.jpg)
-
-](bc3-raw/files/3384127-img_20160406_184832.jpg)
-
-[IMG_20160406_184832.jpg 1.49 MB • Download](bc3-raw/files/3384127-img_20160406_184832.jpg)
+[IMG_20160406_184742.jpg 1.69 MB • Download](../bc3-images/3384084-img_20160406_184742.jpg)
 
 [
 
-![](bc3-raw/files/3384190-img_20160406_184840.jpg)
+![](../bc3-images/3384127-img_20160406_184832.jpg)
 
-](bc3-raw/files/3384190-img_20160406_184840.jpg)
+](../bc3-images/3384127-img_20160406_184832.jpg)
 
-[IMG_20160406_184840.jpg 1.35 MB • Download](bc3-raw/files/3384190-img_20160406_184840.jpg)
+[IMG_20160406_184832.jpg 1.49 MB • Download](../bc3-images/3384127-img_20160406_184832.jpg)
+
+[
+
+![](../bc3-images/3384190-img_20160406_184840.jpg)
+
+](../bc3-images/3384190-img_20160406_184840.jpg)
+
+[IMG_20160406_184840.jpg 1.35 MB • Download](../bc3-images/3384190-img_20160406_184840.jpg)
 
 ### **Hyacinthe** - 2016-04-14 at 8:49 AM
 
@@ -188,11 +188,11 @@ Joris Jean-Baptiste, étudiant en 4ème année à l'UPMC va nous rejoindre pour 
 
  * ADC  * Micro-contrôleur   * Electronique (modules) 
 
-Cela cadre bien avec les exigences de son stage. On attends le retour de son établissement pour signer la convention. Il devrait nous rejoindre dès demain pour commencer à avancer à nos côtés.   Ensuite, ![Michel Bala, Electronique analogique at echopen](./../../zz_assets/images/avatars/2008321.png) Michel qui a fini se examens d'agrégation est passé aujourd'hui et va continuer l'aventure une partie de l'été ;)   Enfin, nous attendons le retour de deux étudiants chinois (UPMC &amp; Spelec) qui pourraient eux aussi nous rejoindre pour deux mois.   @+
+Cela cadre bien avec les exigences de son stage. On attends le retour de son établissement pour signer la convention. Il devrait nous rejoindre dès demain pour commencer à avancer à nos côtés.   Ensuite, Hyacinthe Michel qui a fini se examens d'agrégation est passé aujourd'hui et va continuer l'aventure une partie de l'été ;)   Enfin, nous attendons le retour de deux étudiants chinois (UPMC &amp; Spelec) qui pourraient eux aussi nous rejoindre pour deux mois.   @+
 
 ### **Hyacinthe** - 2016-06-02 at 3:44 PM
 
-quelques efforts plus tard   Daniel Reinzine, qui pilote la partie SI de toute l’imagerie de l’AP-HP et Hyacinthe Naon, qui travaille à la R&amp;D du PACS (Picture Archiving and Communication System) de l'AP veulent nous aider ;))) je leu ai proposé de passer le 18   au bonheur de la data, de l'IA et de ![Hyacinthe, Libre faiseur at echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe  !   btw, je vois Hyacinthe demain, la team IA bientôt UP
+quelques efforts plus tard   Daniel Reinzine, qui pilote la partie SI de toute l’imagerie de l’AP-HP et Hyacinthe Naon, qui travaille à la R&amp;D du PACS (Picture Archiving and Communication System) de l'AP veulent nous aider ;))) je leu ai proposé de passer le 18   au bonheur de la data, de l'IA et de Hyacinthe Hyacinthe  !   btw, je vois Hyacinthe demain, la team IA bientôt UP
 
 ### **Hyacinthe** - 2016-06-22 at 7:32 AM
 
@@ -224,9 +224,9 @@ Par ailleurs Makery est en train de monter sur un appel à subvention CNC qui se
 
 ![](./../../zz_assets/images/previews/7505625-b_art2m_opensourcebody.png)
 
-](bc3-raw/files/7505625-b_art2m_opensourcebody.pdf)
+](../bc3-images/7505625-b_art2m_opensourcebody.pdf)
 
-[B_Art2M_opensourcebody.pdf 3.76 MB • Download](bc3-raw/files/7505625-b_art2m_opensourcebody.pdf)
+[B_Art2M_opensourcebody.pdf 3.76 MB • Download](../bc3-images/7505625-b_art2m_opensourcebody.pdf)
 
 ### **Hyacinthe** - 2016-07-07 at 6:29 PM
 
@@ -234,7 +234,7 @@ Top ce projet de programme, et encore plus si l'HD/APHP sont partants pour ça! 
 
 ### **Hyacinthe** - 2016-07-11 at 1:51 PM
 
-rdv chez Thalès le 26 août, ![Hyacinthe, echopen](./../../zz_assets/images/avatars/2157822.png) Hyacinthe  comme l'an dernier you in ?
+rdv chez Thalès le 26 août, Hyacinthe Hyacinthe  comme l'an dernier you in ?
 
 ### **Hyacinthe** - 2016-07-11 at 3:02 PM
 
@@ -278,7 +278,7 @@ super visite de Shu Lea Cheang, une artiste qui va faire un projet de performanc
 
 ### **Hyacinthe** - 2016-09-12 at 10:24 AM
 
-rdv ce matin avec le CEO de Qwant, et son project manager wiz ![Hyacinthe, echopen](./../../zz_assets/images/avatars/791737.png) Hyacinthe . Pour mémoire Qwant est le moteur de recherche qui veut concurrencer Google, sur la base du respect de la privacy. Springer est un des leurs investisseurs principaux à hauteur de plusieurs 100M€   -&gt; grosse culture de l'open source, pas mal de release de leurs algo en open et le project manager est l'ancien CTO de Firefox OS   -&gt; prise de contact après le concours Solve vendredi, rdv ce matin. Ils souhaitent travailler avec nous sur la partie IA/data : calcul, stockage, algo et proposent un partenariat   -&gt; on vient de lancer un doodle pour rencontre technique avec Hyacinthe et leur CDO/IA   vous tiens au courant de la suite
+rdv ce matin avec le CEO de Qwant, et son project manager wiz Hyacinthe Hyacinthe . Pour mémoire Qwant est le moteur de recherche qui veut concurrencer Google, sur la base du respect de la privacy. Springer est un des leurs investisseurs principaux à hauteur de plusieurs 100M€   -&gt; grosse culture de l'open source, pas mal de release de leurs algo en open et le project manager est l'ancien CTO de Firefox OS   -&gt; prise de contact après le concours Solve vendredi, rdv ce matin. Ils souhaitent travailler avec nous sur la partie IA/data : calcul, stockage, algo et proposent un partenariat   -&gt; on vient de lancer un doodle pour rencontre technique avec Hyacinthe et leur CDO/IA   vous tiens au courant de la suite
 
 ### **Hyacinthe** - 2016-09-12 at 2:12 PM
 
@@ -306,7 +306,7 @@ rdv le 03 octobre avec le resp Big Data lake de l'APHP et le DSI imagerie   obje
 
 ### **Hyacinthe** - 2016-09-22 at 10:26 AM
 
-rdv ce matin avec le directeur de la fondation Altran + ![Hyacinthe, Danseur du ventre at echopen](./../../zz_assets/images/avatars/1248689.png) Hyacinthe   \- echOpen rencontre tous leurs critères   \- proposition de RH sur leurs pôles compétences  électronique embarquée  soft et data analytics  certification   les décisions d'accompagnement seront prises entre fin octobre et décembre et activation début 2017   vous tiens au jus;)
+rdv ce matin avec le directeur de la fondation Altran + Hyacinthe Hyacinthe   \- echOpen rencontre tous leurs critères   \- proposition de RH sur leurs pôles compétences  électronique embarquée  soft et data analytics  certification   les décisions d'accompagnement seront prises entre fin octobre et décembre et activation début 2017   vous tiens au jus;)
 
 ### **Hyacinthe** - 2016-09-30 at 4:54 PM
 
@@ -318,7 +318,7 @@ Sweet! Et n'hésitez pas à mettre une synthèse pour les pauvres hères en tran
 
 ### **Hyacinthe** - 2016-11-05 at 7:11 PM
 
-hi les amis,   je vais faire un peu de redite du slack pour les news du marathon trip à Lausanne, Génève et Marrakech. Btw, on a réfléchi avec Hyacinthe une solution de meilleur usage des espaces slack/basecamp/etc.   \- en Suisse   prez d'echOpen à Hackquarium , accueilli dans un large enthousiasme avec   1) 1 dev FPGA/DSP high level qui va nous aider en review et nous mettre ne relation avec une école qui forme des ingé spécialisés dans ces domaines   2) 1 doctorant de l'EPFL qui fait sa thèse sur des MEMS et qui propose de trouver des points d'articulation avec nous . J'ai un call avec lui demain   pour l'essentiel car il y a plein d'autres choses   \- @Marackech   1) d’une part la over-wonder team de phaino, une dev agency (soft, archi/infra, web, app),  a produit en 48 une app hybride de l’UI, que l’on va porter en natif dans les jours qui viennent.   btw : ![Hyacinthe, Libre faiseur at echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe phaino a groupe de R&amp;D sur les enjeux native vs. hybride vs webapp. confirmation de l'intérêt du natif, notamment pour les perf. de l'UI/gestures. Ce à quoi j'ajoute les possibilités d'interfaçages avec les langues de bas niveau + usage de la GPU --&gt; à ce sujet, g dev une mini-app avec opengl, c top   2) 1 des pointures mondiales de JAVA et son gang, à donf d’Open Source - qu’on s’entende,  il code JAVA directly et était le meilleur contributeur du monde en 2012 - propose un hackathon android/echOpen à Casablanca en décembre /janvier   3) le ministre de la Santé du Togo est très intéressé par echOpen, un entretien est en train de se monter, je vous tient au courant   4) Des chercheurs veulent déployer un lab echOpen au Bénin, rdv mardi   \+ 1 grosse nouvelle dans les prochaines heures/jours   oilà;)
+hi les amis,   je vais faire un peu de redite du slack pour les news du marathon trip à Lausanne, Génève et Marrakech. Btw, on a réfléchi avec Hyacinthe une solution de meilleur usage des espaces slack/basecamp/etc.   \- en Suisse   prez d'echOpen à Hackquarium , accueilli dans un large enthousiasme avec   1) 1 dev FPGA/DSP high level qui va nous aider en review et nous mettre ne relation avec une école qui forme des ingé spécialisés dans ces domaines   2) 1 doctorant de l'EPFL qui fait sa thèse sur des MEMS et qui propose de trouver des points d'articulation avec nous . J'ai un call avec lui demain   pour l'essentiel car il y a plein d'autres choses   \- @Marackech   1) d’une part la over-wonder team de phaino, une dev agency (soft, archi/infra, web, app),  a produit en 48 une app hybride de l’UI, que l’on va porter en natif dans les jours qui viennent.   btw : Hyacinthe Hyacinthe phaino a groupe de R&amp;D sur les enjeux native vs. hybride vs webapp. confirmation de l'intérêt du natif, notamment pour les perf. de l'UI/gestures. Ce à quoi j'ajoute les possibilités d'interfaçages avec les langues de bas niveau + usage de la GPU --&gt; à ce sujet, g dev une mini-app avec opengl, c top   2) 1 des pointures mondiales de JAVA et son gang, à donf d’Open Source - qu’on s’entende,  il code JAVA directly et était le meilleur contributeur du monde en 2012 - propose un hackathon android/echOpen à Casablanca en décembre /janvier   3) le ministre de la Santé du Togo est très intéressé par echOpen, un entretien est en train de se monter, je vous tient au courant   4) Des chercheurs veulent déployer un lab echOpen au Bénin, rdv mardi   \+ 1 grosse nouvelle dans les prochaines heures/jours   oilà;)
 
 ### **Hyacinthe** - 2016-11-10 at 7:43 PM
 
