--- a/bc3-data/95543715.md
+++ b/bc3-data/95543715.md
@@ -1,6 +1,6 @@
 # Ressources echOpen Diverses  - 2016-03-30
 
-Hello à tous,   Un fil de discussion pour échanger sur les ressources echopen. En effet, nous produisons pas mal de choses en plus du hard &amp; du soft comme des photos, etc. Du coup, comment pourrions nous imaginer une solution pour partager ces éléments tous ensemble ?   Sachant que nous devons penser les licences liées à ces productions. Nous avons par exemple les dessins de Barbara en CC BY NC ND,  ![Hyacinthe, Libre faiseur at echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe qui nous a donné ses photos sous les mêmes conditions de CC BY NC ND et mes photos aussi, mais nous n'avons pas encore mentionné ces licences sur ces images.   Par ailleurs, nous allons recevoir les photos de Karine (commandées par Fabre) qui seront sous : _ ©Karine S. Bouvatier pour la Fondation Hyacinthe Fabre _sachant que l'association pourra les utiliser comme elle le souhaite pour ses activités. _  _  Alors quelles seraient vos idées pour que nous puissions partager tout ça en **prenant bien en compte ces différentes licences**.   Merci pour vos retours.
+Hello à tous,   Un fil de discussion pour échanger sur les ressources echopen. En effet, nous produisons pas mal de choses en plus du hard &amp; du soft comme des photos, etc. Du coup, comment pourrions nous imaginer une solution pour partager ces éléments tous ensemble ?   Sachant que nous devons penser les licences liées à ces productions. Nous avons par exemple les dessins de Barbara en CC BY NC ND,  Hyacinthe Hyacinthe qui nous a donné ses photos sous les mêmes conditions de CC BY NC ND et mes photos aussi, mais nous n'avons pas encore mentionné ces licences sur ces images.   Par ailleurs, nous allons recevoir les photos de Karine (commandées par Fabre) qui seront sous : _ ©Karine S. Bouvatier pour la Fondation Hyacinthe Fabre _sachant que l'association pourra les utiliser comme elle le souhaite pour ses activités. _  _  Alors quelles seraient vos idées pour que nous puissions partager tout ça en **prenant bien en compte ces différentes licences**.   Merci pour vos retours.
 
 ### **Hyacinthe** - 2016-05-23 at 12:29 PM
 
@@ -12,11 +12,11 @@ One Git repos to rule them all !!!
 
 ### **Hyacinthe** - 2016-05-24 at 9:53 PM
 
-![Hyacinthe, Libre faiseur at echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe tu veux dire que tout est sur git ? si oui, que fait-on des échanges de type slack ?
+Hyacinthe Hyacinthe tu veux dire que tout est sur git ? si oui, que fait-on des échanges de type slack ?
 
 ### **Hyacinthe** - 2016-05-25 at 9:57 AM
 
-slackin installé accessible à <http://echopen.org:3000/>   ![Hyacinthe, echopen](./../../zz_assets/images/avatars/791737.png) Hyacinthe crée un sous-domaine slack.echopen.org pour lading page + badge sur la home d'échopen
+slackin installé accessible à <http://echopen.org:3000/>   Hyacinthe Hyacinthe crée un sous-domaine slack.echopen.org pour lading page + badge sur la home d'échopen
 
 ### **Hyacinthe** - 2016-05-25 at 1:41 PM
 
@@ -24,7 +24,7 @@ slackin installé accessible à <http://echopen.org:3000/>   ![Hyacinthe, echope
 
 ### **Hyacinthe** - 2016-05-25 at 7:42 PM
 
-merci pour ces informations circonstanciés. côté slack, on peut y inclure des échanges bcp plus informelles, il ne s'agit pas vraiment d'une base de connaissance mais d'une modalité d'inclusion de notre communauté au sens très lâche, du community management inclusif en somme. Pour ma part, je ne suis pas pratiquant de slack mais ![Hyacinthe, echopen](./../../zz_assets/images/avatars/791737.png) Hyacinthe et ![Hyacinthe, echopen](./../../zz_assets/images/avatars/2157822.png) Hyacinthe  sont utilisateurs et je laisse la parole à leur point de vue plus précis
+merci pour ces informations circonstanciés. côté slack, on peut y inclure des échanges bcp plus informelles, il ne s'agit pas vraiment d'une base de connaissance mais d'une modalité d'inclusion de notre communauté au sens très lâche, du community management inclusif en somme. Pour ma part, je ne suis pas pratiquant de slack mais Hyacinthe Hyacinthe  sont utilisateurs et je laisse la parole à leur point de vue plus précis
 
 ### **Hyacinthe** - 2016-05-25 at 7:49 PM
 
