--- a/bc3-data/99813119.md
+++ b/bc3-data/99813119.md
@@ -4,7 +4,7 @@ Un petit thread sur les questions de matériaux:  \- <http://www.signal-processi
 
 ### **Hyacinthe** - 2016-04-27 at 9:21 PM
 
-![Hyacinthe, echopen](./../../zz_assets/images/avatars/2157822.png) Hyacinthe ![Hyacinthe, Libre faiseur at echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe rigolo ;)   <http://www.developpez.com/actu/98164/Un-ingenieur-propose-un-clone-d-Arduino- de-la-taille-d-une-pile-AA-le-dispositif-tourne-avec-un-controleur-ATmega328P- et-32-Ko-de-memoire-flash/>
+Hyacinthe Hyacinthe rigolo ;)   <http://www.developpez.com/actu/98164/Un-ingenieur-propose-un-clone-d-Arduino- de-la-taille-d-une-pile-AA-le-dispositif-tourne-avec-un-controleur-ATmega328P- et-32-Ko-de-memoire-flash/>
 
 ### **Hyacinthe** - 2016-05-17 at 9:14 AM
 
@@ -50,7 +50,7 @@ Excellent !!
 
 ### **Hyacinthe** - 2016-06-13 at 5:49 PM
 
-![Hyacinthe, Community & knowledge at echopen](./../../zz_assets/images/avatars/1269172.png) Hyacinthe  --  lien pour le matos sur hackaday: <https://hackaday.io/project/11478-open-source- ultrasound-phantoms>
+Hyacinthe Hyacinthe  --  lien pour le matos sur hackaday: <https://hackaday.io/project/11478-open-source- ultrasound-phantoms>
 
 ### **Hyacinthe** - 2016-06-17 at 12:18 PM
 
