--- a/bc3-data/232446215.md
+++ b/bc3-data/232446215.md
@@ -20,7 +20,7 @@ perfect   @++
 
 ### **Hyacinthe** - 2016-10-17 at 8:50 PM
 
-Date tentative repoussée au 04/11 pour cause de vacances ;)   Pour ceux que ca interesse, premier draft de slidedeck at <https://github.com/Hyacinthe124/echomods/blob/master/include/ppt_CLA.md>
+Date tentative repoussée au 04/11 pour cause de vacances ;)   Pour ceux que ca interesse, premier draft de slidedeck at <https://github.com/kelu124/echomods/blob/master/include/ppt_CLA.md>
 
 ### **Hyacinthe** - 2016-10-18 at 7:42 PM
 
@@ -28,7 +28,7 @@ ah du coup nous on sera à Africa4Tech, décalage encore d'une semaine ?
 
 ### **Hyacinthe** - 2016-10-28 at 12:10 PM
 
-Plus besoin forcément de faire le workshop, sous la license echOpen, on note que: "_Each contributor grants you a non-exclusive, worldwide, royalty-free patent license under the contributor's essential patent claims, to make, use, sell, offer for sale, import and otherwise run, modify and propagate the contents of its contributor version_". Ca répond à ma question sur les droits d'auteurs: ils restent bien aux contributeurs, qui donnent l'autorisation au projet d'utiliser leur contribution.   Solved! Du coup, où je peux pusher les modules? ;)   Ca peut valoir le coup néanmoins de garder la discussion du 4/11, pas forcément en mode workshop, mais discussion de la pertinence des CLAs pour le projet, qu'en pensez vous ![Hyacinthe, Libre faiseur at echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe ![Hyacinthe, echopen](./../../zz_assets/images/avatars/782178.png) lacenne ![Hyacinthe, echopen](./../../zz_assets/images/avatars/791737.png) Hyacinthe   ?
+Plus besoin forcément de faire le workshop, sous la license echOpen, on note que: "_Each contributor grants you a non-exclusive, worldwide, royalty-free patent license under the contributor's essential patent claims, to make, use, sell, offer for sale, import and otherwise run, modify and propagate the contents of its contributor version_". Ca répond à ma question sur les droits d'auteurs: ils restent bien aux contributeurs, qui donnent l'autorisation au projet d'utiliser leur contribution.   Solved! Du coup, où je peux pusher les modules? ;)   Ca peut valoir le coup néanmoins de garder la discussion du 4/11, pas forcément en mode workshop, mais discussion de la pertinence des CLAs pour le projet, qu'en pensez vous Hyacinthe Hyacinthe   ?
 
 ### **Hyacinthe** - 2016-10-28 at 12:59 PM
 
@@ -40,7 +40,7 @@ Je suis d'accord avec toi, il y avait une ambiguïté à la base. Normalement, l
 
 ### **Hyacinthe** - 2016-11-01 at 2:33 PM
 
-Version du doc de réflexion updaté ici <https://github.com/Hyacinthe124/echomods/blob/master/include/ppt_CLA.md> .  A noter qu'usuellement dans le FOSS, il n'y a pas de cession de droits d'auteurs, mais création lors du CLA d'une license qui est accordée par le contributeur au projet auquel il contribue, d'exploiter sa contribution.  Une remarque: la cession des droits n'est pas obligatoire, même pour les personnes rémunérées par une structure. Une simple cession de droits d'exploitation (mais pas de droits d'auteurs) suffit pour que la structure sécurise l'utilisation des contributions.
+Version du doc de réflexion updaté ici <https://github.com/kelu124/echomods/blob/master/include/ppt_CLA.md> .  A noter qu'usuellement dans le FOSS, il n'y a pas de cession de droits d'auteurs, mais création lors du CLA d'une license qui est accordée par le contributeur au projet auquel il contribue, d'exploiter sa contribution.  Une remarque: la cession des droits n'est pas obligatoire, même pour les personnes rémunérées par une structure. Une simple cession de droits d'exploitation (mais pas de droits d'auteurs) suffit pour que la structure sécurise l'utilisation des contributions.
 
 ### **Hyacinthe** - 2016-11-05 at 6:51 PM
 
@@ -68,7 +68,7 @@ Oui, merci pour l’éclaircissement. ça me semble correcte et logique..
 
 ### **Hyacinthe** - 2016-11-06 at 10:45 AM
 
-hello à tous,   de prime abord, ça paraît en effet logique mais les juristes que nous avons rencontrés, y compris du libre, pensent que ce n'est pas si simple, précisément pour protéger  le travail de la communauté. Suis à ce titre d'accord avec l'ami ![Hyacinthe, Danseur du ventre at echopen](./../../zz_assets/images/avatars/1248689.png) Hyacinthe . Et c important que cette réflexion soit menée en communauté et que le modèle que nous adopterons ne soit pas pensé pour protéger un travail ou en fonction d'intérêts particuliers   @++
+hello à tous,   de prime abord, ça paraît en effet logique mais les juristes que nous avons rencontrés, y compris du libre, pensent que ce n'est pas si simple, précisément pour protéger  le travail de la communauté. Suis à ce titre d'accord avec l'ami Hyacinthe Hyacinthe . Et c important que cette réflexion soit menée en communauté et que le modèle que nous adopterons ne soit pas pensé pour protéger un travail ou en fonction d'intérêts particuliers   @++
 
 ### **Nassim Chadli** - 2016-11-06 at 11:06 AM
 
@@ -76,15 +76,15 @@ Oui justement mais après coup, trop de contributeurs et ça va rendre le travai
 
 ### **Hyacinthe** - 2016-11-06 at 12:24 PM
 
-bien sûr ![Nassim Chadli, Instanciator at echopen](./../../zz_assets/images/avatars/4069013.png) Nassim , ca restera complètement Open ! en fait, sur les élts que le device medical utilisera, ca sera open/libre et il faut qu'on protège précisément la communauté des usages qui ne respecteraient pas les principes de l'open/libre et pour lesquels la communauté doit pouvoir se fédérer pour se défendre. C ce point que les juristes soulèvent.   Ceci étant, le sens de mon message est qu'il faut qu'on pèse tous ensemble les pour et les contre, et que ca doit faire partie d'un débat qui impliquent notamment des juristes. Pour ma part, je n'ai pas de positions définies à ce sujet.   Au total, ce que je retiens de ce fil de discussion et des points de vue ici échangés, c que ce sujet n'est pas simple, que l'identité même du projet est l'open et qu'il nous faut un workshop, celui-là même dont nous discutions avec Hyacinthe, et qu'on ne peut pas trancher par évidence.   On vous dit la date et vous pourrez participer par skype !!
+bien sûr Hyacinthe Nassim , ca restera complètement Open ! en fait, sur les élts que le device medical utilisera, ca sera open/libre et il faut qu'on protège précisément la communauté des usages qui ne respecteraient pas les principes de l'open/libre et pour lesquels la communauté doit pouvoir se fédérer pour se défendre. C ce point que les juristes soulèvent.   Ceci étant, le sens de mon message est qu'il faut qu'on pèse tous ensemble les pour et les contre, et que ca doit faire partie d'un débat qui impliquent notamment des juristes. Pour ma part, je n'ai pas de positions définies à ce sujet.   Au total, ce que je retiens de ce fil de discussion et des points de vue ici échangés, c que ce sujet n'est pas simple, que l'identité même du projet est l'open et qu'il nous faut un workshop, celui-là même dont nous discutions avec Hyacinthe, et qu'on ne peut pas trancher par évidence.   On vous dit la date et vous pourrez participer par skype !!
 
 ### **Hyacinthe** - 2016-11-06 at 12:24 PM
 
-True. Dans tous les cas, c'est bien de savoir quelles sont les choses qui sont cédées lors d'une contribution - droit d'auteurs ou license d'exploitation, et que ce soit transparent pour les contributeurs qui n'ont pas signé de cession de droits.   Dans tous les cas, la license echopen telle qu'ecrite aujourd'hui dit clairement que les contributeurs gardent ces droits d'auteurs, et donc pas de souci pour moi de partager mes modules =)   Il est possible de ceder une license d'exploitation qui garantit basiquement les memes droits que les droits d'auteurs, c'est le principe des licenses en mode inbound (contributeur-&gt;projet) plutot que license outboud (projet-&gt;users).   De mon côté, c'est simple, les modules que j'ai développé peuvent être utilisés dans d'autres applications, et j'aimerai les y voir. Garder des droits sur ces contributions permets du coup de faire profiter les communautés open hardware par exemple d'un DAQ haute vitesse, wireless =)   Des notes sont prises sur <https://github.com/Hyacinthe124/echomods/blob/master/include/ppt_CLA.md>, n'hésitez pas à pointer des incohérences.
+True. Dans tous les cas, c'est bien de savoir quelles sont les choses qui sont cédées lors d'une contribution - droit d'auteurs ou license d'exploitation, et que ce soit transparent pour les contributeurs qui n'ont pas signé de cession de droits.   Dans tous les cas, la license echopen telle qu'ecrite aujourd'hui dit clairement que les contributeurs gardent ces droits d'auteurs, et donc pas de souci pour moi de partager mes modules =)   Il est possible de ceder une license d'exploitation qui garantit basiquement les memes droits que les droits d'auteurs, c'est le principe des licenses en mode inbound (contributeur-&gt;projet) plutot que license outboud (projet-&gt;users).   De mon côté, c'est simple, les modules que j'ai développé peuvent être utilisés dans d'autres applications, et j'aimerai les y voir. Garder des droits sur ces contributions permets du coup de faire profiter les communautés open hardware par exemple d'un DAQ haute vitesse, wireless =)   Des notes sont prises sur <https://github.com/kelu124/echomods/blob/master/include/ppt_CLA.md>, n'hésitez pas à pointer des incohérences.
 
 ### **Hyacinthe** - 2016-11-06 at 12:36 PM
 
-![Nassim Chadli, Instanciator at echopen](./../../zz_assets/images/avatars/4069013.png) Nassim , c'est plutot l'inverse que je trouverais dommage: que le projet soit ouvert aux usages, mais fermé aux contributions bénévoles pour des raisons que je ne comprends pas vraiment.  Ceci étant dit, je suis curieux et intéressé de voir le raisonnement des juristes à préconiser cette assignation de copyrights.   En parallèle, je trouve ça bien aussi de faire un distingo entre les contributeurs bénévoles, et ceux rémunérés par l'asso, dont les contribs sont de facto celles de l'asso.
+Hyacinthe Nassim , c'est plutot l'inverse que je trouverais dommage: que le projet soit ouvert aux usages, mais fermé aux contributions bénévoles pour des raisons que je ne comprends pas vraiment.  Ceci étant dit, je suis curieux et intéressé de voir le raisonnement des juristes à préconiser cette assignation de copyrights.   En parallèle, je trouve ça bien aussi de faire un distingo entre les contributeurs bénévoles, et ceux rémunérés par l'asso, dont les contribs sont de facto celles de l'asso.
 
 ### **Hyacinthe** - 2016-11-06 at 3:38 PM
 
@@ -92,5 +92,5 @@ ok nice, ca nous promet des débats riches ! partons sur un workshop dans les to
 
 ### **Hyacinthe** - 2016-11-06 at 8:38 PM
 
-![Hyacinthe, echopen](./../../zz_assets/images/avatars/782178.png) lacenne   ce serait cool qu'un juriste puisse exposer son point de vue ici et échanger en amont de cet atelier, histoire de le préparer, tu penses pouvoir en motiver un a échanger ici?
+Hyacinthe lacenne   ce serait cool qu'un juriste puisse exposer son point de vue ici et échanger en amont de cet atelier, histoire de le préparer, tu penses pouvoir en motiver un a échanger ici?
 
