--- a/bc3-data/47117964.md
+++ b/bc3-data/47117964.md
@@ -2,27 +2,27 @@
 
 [
 
-![](bc3-raw/files/935595-20160120_082829.jpg)
+![](../bc3-images/935595-20160120_082829.jpg)
 
-](bc3-raw/files/935595-20160120_082829.jpg)
+](../bc3-images/935595-20160120_082829.jpg)
 
-[20160120_082829.jpg 2.15 MB • Download](bc3-raw/files/935595-20160120_082829.jpg)
-
-[
-
-![](bc3-raw/files/935600-20160120_004503.jpg)
-
-](bc3-raw/files/935600-20160120_004503.jpg)
-
-[20160120_004503.jpg 2.05 MB • Download](bc3-raw/files/935600-20160120_004503.jpg)
+[20160120_082829.jpg 2.15 MB • Download](../bc3-images/935595-20160120_082829.jpg)
 
 [
 
-![](bc3-raw/files/935603-20160120_004438.jpg)
+![](../bc3-images/935600-20160120_004503.jpg)
 
-](bc3-raw/files/935603-20160120_004438.jpg)
+](../bc3-images/935600-20160120_004503.jpg)
 
-[20160120_004438.jpg 2.08 MB • Download](bc3-raw/files/935603-20160120_004438.jpg)
+[20160120_004503.jpg 2.05 MB • Download](../bc3-images/935600-20160120_004503.jpg)
+
+[
+
+![](../bc3-images/935603-20160120_004438.jpg)
+
+](../bc3-images/935603-20160120_004438.jpg)
+
+[20160120_004438.jpg 2.08 MB • Download](../bc3-images/935603-20160120_004438.jpg)
 
 Premiers essais de tir avec le laser, ça ne se passe pas trop mal :
 
@@ -58,41 +58,41 @@ En fait j'ai regardé, ta formule ne donne pas un pas angulaire Hyacinthe :
 
 [
 
-![](bc3-raw/files/944822-psi_Hyacinthe.png)
+![](../bc3-images/944822-psi_Hyacinthe.png)
 
-](bc3-raw/files/944822-psi_Hyacinthe.png)
+](../bc3-images/944822-psi_Hyacinthe.png)
 
-[psi_Hyacinthe.png 81.4 KB • Download](bc3-raw/files/944822-psi_Hyacinthe.png)
+[psi_Hyacinthe.png 81.4 KB • Download](../bc3-images/944822-psi_Hyacinthe.png)
 
   mais donne un pas en z Hyacinthe sur le plan de projection : 
 
 [
 
-![](bc3-raw/files/944835-projection_Hyacinthe.png)
+![](../bc3-images/944835-projection_Hyacinthe.png)
 
-](bc3-raw/files/944835-projection_Hyacinthe.png)
+](../bc3-images/944835-projection_Hyacinthe.png)
 
-[projection_Hyacinthe.png 39.3 KB • Download](bc3-raw/files/944835-projection_Hyacinthe.png)
+[projection_Hyacinthe.png 39.3 KB • Download](../bc3-images/944835-projection_Hyacinthe.png)
 
   Avec ma formule c'est l'inverse, un pas angulaire Hyacinthe : 
 
 [
 
-![](bc3-raw/files/944908-regular_pulse2.png)
+![](../bc3-images/944908-regular_pulse2.png)
 
-](bc3-raw/files/944908-regular_pulse2.png)
+](../bc3-images/944908-regular_pulse2.png)
 
-[regular_pulse2.png 79.5 KB • Download](bc3-raw/files/944908-regular_pulse2.png)
+[regular_pulse2.png 79.5 KB • Download](../bc3-images/944908-regular_pulse2.png)
 
   et du coup un pas en z variable sur le plan de projection : 
 
 [
 
-![](bc3-raw/files/944932-projection_gg.png)
+![](../bc3-images/944932-projection_gg.png)
 
-](bc3-raw/files/944932-projection_gg.png)
+](../bc3-images/944932-projection_gg.png)
 
-[projection_GG.png 33.3 KB • Download](bc3-raw/files/944932-projection_gg.png)
+[projection_GG.png 33.3 KB • Download](../bc3-images/944932-projection_gg.png)
 
 ### **Hyacinthe** - 2016-01-20 at 4:45 PM
 
@@ -108,7 +108,7 @@ En fait, ta formule à l'avantage d'avoir un temps minimal entre deux pulses (au
 
 ### **Hyacinthe** - 2016-01-20 at 9:54 PM
 
-![Hyacinthe, hardware thinker at echopen](./../../zz_assets/images/avatars/782574.png) Hyacinthe , oui, je pense que c'est peut-être pas plus compliqué d'intégrer un Espruino pico sur la carte analogique qui jouerait un peu le rôle de PRU (sans la mémoire partagée) si on a trop de soucis de Tps réel avec la RedPitaya.  Actuellement l'asservissement est très rustique, rebouclé tous les 1/2 tours de sonde. Avec les moteurs de Hyacinthe on aura une plus grande finesse (57 fois plus de tops, je crois).  Cette architecture remet peut-être dans la course le RPi 2 (RPi 2 + Pico) qui est quand même plus puissant que le BeagleBone black (choisi un peu pour ses PRU, je crois).  Actuellement je fais le moteur, le top/tour, le tir avec 1 pico, 2 résistances, 1 diode, 1 mosfet et une alim unique 5V.  Ça nous donnerait aussi un degré de liberté pour tester d'autres cartes de haut niveau (traitement du signal à partir de l'ADC et transmission) dans se préoccuper de re-coder tout l'automate de pilotage de la mécanique et de l'analogique pour chaque carte CPU de haut niveau. L'interface entre les deux pourrait se résumer à qq chose comme :
+Hyacinthe Hyacinthe , oui, je pense que c'est peut-être pas plus compliqué d'intégrer un Espruino pico sur la carte analogique qui jouerait un peu le rôle de PRU (sans la mémoire partagée) si on a trop de soucis de Tps réel avec la RedPitaya.  Actuellement l'asservissement est très rustique, rebouclé tous les 1/2 tours de sonde. Avec les moteurs de Hyacinthe on aura une plus grande finesse (57 fois plus de tops, je crois).  Cette architecture remet peut-être dans la course le RPi 2 (RPi 2 + Pico) qui est quand même plus puissant que le BeagleBone black (choisi un peu pour ses PRU, je crois).  Actuellement je fais le moteur, le top/tour, le tir avec 1 pico, 2 résistances, 1 diode, 1 mosfet et une alim unique 5V.  Ça nous donnerait aussi un degré de liberté pour tester d'autres cartes de haut niveau (traitement du signal à partir de l'ADC et transmission) dans se préoccuper de re-coder tout l'automate de pilotage de la mécanique et de l'analogique pour chaque carte CPU de haut niveau. L'interface entre les deux pourrait se résumer à qq chose comme :
 
  * 1 entrée M/A  * 1 sortie top de synchro trame  * 1 sortie top de synchro ligne  * 1 sortie analogique (sortie détection enveloppe)
 
@@ -116,7 +116,7 @@ Le plus délicat serait peut-être la création de la rampe de gain de l'ampli. 
 
 ### **Hyacinthe** - 2016-01-21 at 6:51 AM
 
-Agreed comme archi.  Avoir des modules communiquants permettrait de cloisonner le temps réel la ou il y en a besoin :)  En parallèle, je jette un coup d'oeil curieux aux dsp (si il y a des Hilbert / enveloppe déjà pré programmés) + un truc du style PIC24FJ128GC010 (  ![Hyacinthe, FPGA at echopen](./../../zz_assets/images/avatars/1249124.png) Hyacinthe  tu connais? - uc/adc/usb/tcpip) pour ce qui est de détection + preassemblage.. Mais le uc à l'air trop récent pour être bien compris et utilisé.
+Agreed comme archi.  Avoir des modules communiquants permettrait de cloisonner le temps réel la ou il y en a besoin :)  En parallèle, je jette un coup d'oeil curieux aux dsp (si il y a des Hilbert / enveloppe déjà pré programmés) + un truc du style PIC24FJ128GC010 (  Hyacinthe Hyacinthe  tu connais? - uc/adc/usb/tcpip) pour ce qui est de détection + preassemblage.. Mais le uc à l'air trop récent pour être bien compris et utilisé.
 
 ### **Hyacinthe** - 2016-01-21 at 1:49 PM
 
