--- a/bc3-data/59567910.md
+++ b/bc3-data/59567910.md
@@ -1,4 +1,4 @@
 # un petit coucou Archived  - 2016-02-08
 
-hello, j'ai eu un coup de fil de Hyacinthe qui vous passe tous un coucou et qui passera de temps à autre le lundi soir   ![Hyacinthe, echopen](./../../zz_assets/images/avatars/791737.png) Hyacinthe   ce serait pas mal de l'ajouter à ce basecamp ?   @++
+hello, j'ai eu un coup de fil de Hyacinthe qui vous passe tous un coucou et qui passera de temps à autre le lundi soir   Hyacinthe Hyacinthe   ce serait pas mal de l'ajouter à ce basecamp ?   @++
 
