--- a/bc3-data/66396123.md
+++ b/bc3-data/66396123.md
@@ -1,6 +1,6 @@
 # Administration serveur dédié  - 2016-02-18
 
-Avec  ![Hyacinthe, hardware thinker at echopen](./../../zz_assets/images/avatars/782574.png) Hyacinthe  on se disait lundi soir qu'il serait peut-être bien d'équiper le serveur Gandi d'une surcouche d'administration qui permettrait une gestion via le Web plus facile à aborder pour ceux qui, comme moi,  ne sont pas des dieux du ssh.  ![Hyacinthe, hardware thinker at echopen](./../../zz_assets/images/avatars/782574.png) Hyacinthe  parlait de cPanel (qu'il connait bien) et moi de Webmin (que j'utilise quotidiennement). Après un petit tour sur <http://alternativeto.net/software/webmin/> il s'avère que le trio gagnant serait :
+Avec  Hyacinthe Hyacinthe  parlait de cPanel (qu'il connait bien) et moi de Webmin (que j'utilise quotidiennement). Après un petit tour sur <http://alternativeto.net/software/webmin/> il s'avère que le trio gagnant serait :
 
  1. Webmin (128) - Open source : <http://www.webmin.com/>  2. Ajenti (87) - Open source : <http://ajenti.org/>  3. cPanel (63) - Commercial : <http://www.cpanel.com/>
 
