--- a/bc3-data/68317765.md
+++ b/bc3-data/68317765.md
@@ -20,11 +20,11 @@ Si ça peut aider, j'ai trouvé un mec qui a désossé la même trifrequence que
 
 [
 
-![](bc3-raw/files/3845549-screenshot_2016-04-18-21-31-43.png)
+![](../bc3-images/3845549-screenshot_2016-04-18-21-31-43.png)
 
-](bc3-raw/files/3845549-screenshot_2016-04-18-21-31-43.png)
+](../bc3-images/3845549-screenshot_2016-04-18-21-31-43.png)
 
-[Screenshot_2016-04-18-21-31-43.png 486 KB • Download](bc3-raw/files/3845549-screenshot_2016-04-18-21-31-43.png)
+[Screenshot_2016-04-18-21-31-43.png 486 KB • Download](../bc3-images/3845549-screenshot_2016-04-18-21-31-43.png)
 
 ### **Hyacinthe** - 2016-04-24 at 4:04 PM
 
@@ -36,7 +36,7 @@ il me dit qu'il est en partiel jusqu'à fin mai et qu'il commence le désossage 
 
 ### **Hyacinthe** - 2016-06-18 at 2:37 PM
 
-![Hyacinthe, echopen](./../../zz_assets/images/avatars/782178.png) lacenne   Faut lui dire  qu'on a fait remarcher la notre sur : <https://github.com/Hyacinthe124/echomods/tree/master/retro10PV>
+Hyacinthe lacenne   Faut lui dire  qu'on a fait remarcher la notre sur : <https://github.com/kelu124/echomods/tree/master/retro10PV>
 
 ### **Hyacinthe** - 2016-06-30 at 9:47 AM
 
