--- a/bc3-data/88851044.md
+++ b/bc3-data/88851044.md
@@ -14,7 +14,7 @@ Et je suis resté un peu ensuite pour faire un tour du Fablab :
 
 ### **Hyacinthe** - 2016-03-31 at 11:05 AM
 
-Pour le Captech de mardi prochain :  Le document de base de référence est disponible [ici](https://docs.google.com/document/d/1vNT7Ir01gAAjsohgqN5a_Y9ZoAEBHPQmQlIxxvTKVGc/edit#). Pour ce qui est des points fonctions &amp; such, on voit cela demain matin avec  ![Hyacinthe, Community & knowledge at echopen](./../../zz_assets/images/avatars/1269172.png) Hyacinthe  et  ![Hyacinthe, Contributeur méthodologie at echopen](./../../zz_assets/images/avatars/1269173.png) Hyacinthe . On finalise aujourd'hui avec  ![Hyacinthe, Danseur du ventre at echopen](./../../zz_assets/images/avatars/1248689.png) Hyacinthe  le schéma de la sonde.   Vos remarques sont les bienvenues ;)
+Pour le Captech de mardi prochain :  Le document de base de référence est disponible [ici](https://docs.google.com/document/d/1vNT7Ir01gAAjsohgqN5a_Y9ZoAEBHPQmQlIxxvTKVGc/edit#). Pour ce qui est des points fonctions &amp; such, on voit cela demain matin avec  Hyacinthe Hyacinthe  le schéma de la sonde.   Vos remarques sont les bienvenues ;)
 
 ### **Hyacinthe** - 2016-03-31 at 8:23 PM
 
@@ -24,11 +24,11 @@ Merci!  J'ai avancé sur le doc.
 
 Bonjour à tous,   En prévision du CAPTech de mardi prochain, voici les premiers éléments de présentation
 
- * Le [Schéma](https://docs.google.com/presentation/d/1X4QVfOYeUJSIhjSg8QRVOj-x31x2ZA7QWVpnQNl3qtY/edit#slide=id.p4) de la sonde (revu par  ![Hyacinthe, Libre faiseur at echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe ) que je mettrai en forme lundi après-midi sur la base du travail déjà réalisé par  ![Hyacinthe, Danseur du ventre at echopen](./../../zz_assets/images/avatars/1248689.png) Hyacinthe  puis avec  ![Hyacinthe, Community & knowledge at echopen](./../../zz_assets/images/avatars/1269172.png) Hyacinthe  et  ![Hyacinthe, Contributeur méthodologie at echopen](./../../zz_assets/images/avatars/1269173.png) Hyacinthe  et parti du [tableau](https://docs.google.com/spreadsheets/d/17jtXg-r6_nDEFxN0xtRFjEYXCeVaxZG9clrJDgage0o/edit) général.   * Nous parlerons aussi des aspects de documentation pour le quel  ![Hyacinthe, Community & knowledge at echopen](./../../zz_assets/images/avatars/1269172.png) Hyacinthe  et  ![Hyacinthe, Contributeur méthodologie at echopen](./../../zz_assets/images/avatars/1269173.png) Hyacinthe  on commencé une [document](https://docs.google.com/document/d/11dJB4cTPcXkxdXE4P0HZj2o6fjAQtg2ZvGt33IAwT-s/edit#) que je vous invite à regarder et vos remarques sont les bienvenues. Notez que dans ce travail de documentation il est important que la lecture soit simple et qu'il y aura, à terme, des normes à respecter.  
+ * Le [Schéma](https://docs.google.com/presentation/d/1X4QVfOYeUJSIhjSg8QRVOj-x31x2ZA7QWVpnQNl3qtY/edit#slide=id.p4) de la sonde (revu par  Hyacinthe Hyacinthe  on commencé une [document](https://docs.google.com/document/d/11dJB4cTPcXkxdXE4P0HZj2o6fjAQtg2ZvGt33IAwT-s/edit#) que je vous invite à regarder et vos remarques sont les bienvenues. Notez que dans ce travail de documentation il est important que la lecture soit simple et qu'il y aura, à terme, des normes à respecter.  
 
   Bonne journée à tous.
 
 ### **Hyacinthe** - 2016-04-12 at 2:12 PM
 
-![Hyacinthe, Libre faiseur at echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe  voici le gdoc d'  ![Hyacinthe, echopen](./../../zz_assets/images/avatars/791737.png) Hyacinthe pour la prépa du hackaton méca ;)   <https://docs.google.com/document/d/1T0rcg9NmNtdjPB8jdhmQ5RWkwCaVaP7IqTzbHIdKJgM/edit#heading=h.51pvtcdf4smh>
+Hyacinthe Hyacinthe pour la prépa du hackaton méca ;)   <https://docs.google.com/document/d/1T0rcg9NmNtdjPB8jdhmQ5RWkwCaVaP7IqTzbHIdKJgM/edit#heading=h.51pvtcdf4smh>
 
