--- a/bc3-data/94270736.md
+++ b/bc3-data/94270736.md
@@ -10,9 +10,9 @@ Super idée - though a tad late .. J'ai commencé à corriger des typos =)   Si 
 
 ![](./../../zz_assets/images/previews/3034651-kwan_bmes_2015_v1.png)
 
-](bc3-raw/files/3034651-kwan_bmes_2015_v1.pdf)
+](../bc3-images/3034651-kwan_bmes_2015_v1.pdf)
 
-[Kwan_BMES_2015_v1.pdf 734 KB • Download](bc3-raw/files/3034651-kwan_bmes_2015_v1.pdf)
+[Kwan_BMES_2015_v1.pdf 734 KB • Download](../bc3-images/3034651-kwan_bmes_2015_v1.pdf)
 
 ### **Hyacinthe** - 2016-03-31 at 2:39 PM
 
